commit translated contents

--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.worksheetprotectionoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.worksheetprotectionoptions.yml
@@ -1,33 +1,33 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.WorksheetProtectionOptions
+  - uid: 'excel!Excel.WorksheetProtectionOptions:interface'
     summary: |-
       代表工作表保护中的选项。
 
-      \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.WorksheetProtectionOptions
     fullName: Excel.WorksheetProtectionOptions
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.WorksheetProtectionOptions.allowAutoFilter
-      - excel.Excel.WorksheetProtectionOptions.allowDeleteColumns
-      - excel.Excel.WorksheetProtectionOptions.allowDeleteRows
-      - excel.Excel.WorksheetProtectionOptions.allowFormatCells
-      - excel.Excel.WorksheetProtectionOptions.allowFormatColumns
-      - excel.Excel.WorksheetProtectionOptions.allowFormatRows
-      - excel.Excel.WorksheetProtectionOptions.allowInsertColumns
-      - excel.Excel.WorksheetProtectionOptions.allowInsertHyperlinks
-      - excel.Excel.WorksheetProtectionOptions.allowInsertRows
-      - excel.Excel.WorksheetProtectionOptions.allowPivotTables
-      - excel.Excel.WorksheetProtectionOptions.allowSort
-  - uid: excel.Excel.WorksheetProtectionOptions.allowAutoFilter
+      - 'excel!Excel.WorksheetProtectionOptions#allowAutoFilter:member'
+      - 'excel!Excel.WorksheetProtectionOptions#allowDeleteColumns:member'
+      - 'excel!Excel.WorksheetProtectionOptions#allowDeleteRows:member'
+      - 'excel!Excel.WorksheetProtectionOptions#allowFormatCells:member'
+      - 'excel!Excel.WorksheetProtectionOptions#allowFormatColumns:member'
+      - 'excel!Excel.WorksheetProtectionOptions#allowFormatRows:member'
+      - 'excel!Excel.WorksheetProtectionOptions#allowInsertColumns:member'
+      - 'excel!Excel.WorksheetProtectionOptions#allowInsertHyperlinks:member'
+      - 'excel!Excel.WorksheetProtectionOptions#allowInsertRows:member'
+      - 'excel!Excel.WorksheetProtectionOptions#allowPivotTables:member'
+      - 'excel!Excel.WorksheetProtectionOptions#allowSort:member'
+  - uid: 'excel!Excel.WorksheetProtectionOptions#allowAutoFilter:member'
     summary: |-
       表示允许使用自动筛选功能的工作表保护选项。
 
-      \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowAutoFilter
     fullName: allowAutoFilter
     langs:
@@ -38,11 +38,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.WorksheetProtectionOptions.allowDeleteColumns
+  - uid: 'excel!Excel.WorksheetProtectionOptions#allowDeleteColumns:member'
     summary: |-
       表示允许删除列的工作表保护选项。
 
-      \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowDeleteColumns
     fullName: allowDeleteColumns
     langs:
@@ -53,11 +53,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.WorksheetProtectionOptions.allowDeleteRows
+  - uid: 'excel!Excel.WorksheetProtectionOptions#allowDeleteRows:member'
     summary: |-
       表示允许删除行的工作表保护选项。
 
-      \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowDeleteRows
     fullName: allowDeleteRows
     langs:
@@ -68,11 +68,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.WorksheetProtectionOptions.allowFormatCells
+  - uid: 'excel!Excel.WorksheetProtectionOptions#allowFormatCells:member'
     summary: |-
       表示允许格式化单元格的工作表保护选项。
 
-      \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowFormatCells
     fullName: allowFormatCells
     langs:
@@ -83,11 +83,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.WorksheetProtectionOptions.allowFormatColumns
+  - uid: 'excel!Excel.WorksheetProtectionOptions#allowFormatColumns:member'
     summary: |-
       表示允许格式化列的工作表保护选项。
 
-      \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowFormatColumns
     fullName: allowFormatColumns
     langs:
@@ -98,11 +98,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.WorksheetProtectionOptions.allowFormatRows
+  - uid: 'excel!Excel.WorksheetProtectionOptions#allowFormatRows:member'
     summary: |-
       表示允许格式化行的工作表保护选项。
 
-      \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowFormatRows
     fullName: allowFormatRows
     langs:
@@ -113,11 +113,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.WorksheetProtectionOptions.allowInsertColumns
+  - uid: 'excel!Excel.WorksheetProtectionOptions#allowInsertColumns:member'
     summary: |-
       表示允许插入列的工作表保护选项。
 
-      \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowInsertColumns
     fullName: allowInsertColumns
     langs:
@@ -128,11 +128,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.WorksheetProtectionOptions.allowInsertHyperlinks
+  - uid: 'excel!Excel.WorksheetProtectionOptions#allowInsertHyperlinks:member'
     summary: |-
       表示允许插入超链接的工作表保护选项。
 
-      \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowInsertHyperlinks
     fullName: allowInsertHyperlinks
     langs:
@@ -143,11 +143,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.WorksheetProtectionOptions.allowInsertRows
+  - uid: 'excel!Excel.WorksheetProtectionOptions#allowInsertRows:member'
     summary: |-
       表示允许插入行的工作表保护选项。
 
-      \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowInsertRows
     fullName: allowInsertRows
     langs:
@@ -158,11 +158,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.WorksheetProtectionOptions.allowPivotTables
+  - uid: 'excel!Excel.WorksheetProtectionOptions#allowPivotTables:member'
     summary: |-
       表示允许使用数据透视表功能的工作表保护选项。
 
-      \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowPivotTables
     fullName: allowPivotTables
     langs:
@@ -173,11 +173,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.WorksheetProtectionOptions.allowSort
+  - uid: 'excel!Excel.WorksheetProtectionOptions#allowSort:member'
     summary: |-
       表示允许使用排序功能的工作表保护选项。
 
-      \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowSort
     fullName: allowSort
     langs:
