--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.requestcontext.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.requestcontext.yml
@@ -1,20 +1,20 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.RequestContext
-    summary: 'RequestContext 对象可加快对 Excel 应用程序的请求。 由于 Office 加载项和 Excel 应用程序在两个不同的进程中运行, 因此请求上下文是从外接程序获取对 Excel 对象模型的访问权限所必需的。'
+  - uid: 'excel!Excel.RequestContext:class'
+    summary: RequestContext 对象可加快对 Excel 应用程序的请求。 由于 Office 加载项和 Excel 应用程序在两个不同的进程中运行，因此请求上下文是从外接程序获取对 Excel 对象模型的访问权限所必需的。
     name: Excel.RequestContext
     fullName: Excel.RequestContext
     langs:
       - typeScript
     type: class
     extends:
-      - 'OfficeExtension.ClientRequestContext '
-    package: excel
+      - 'excel!OfficeExtension.ClientRequestContext:class'
+    package: excel!
     children:
-      - excel.Excel.RequestContext.(constructor)
-      - excel.Excel.RequestContext.application
-      - excel.Excel.RequestContext.workbook
-  - uid: excel.Excel.RequestContext.(constructor)
+      - 'excel!Excel.RequestContext:constructor(1)'
+      - 'excel!Excel.RequestContext#application:member'
+      - 'excel!Excel.RequestContext#workbook:member'
+  - uid: 'excel!Excel.RequestContext:constructor(1)'
     summary: 构造`RequestContext`类的新实例
     name: (constructor)(url)
     fullName: (constructor)(url)
@@ -27,8 +27,8 @@ items:
         - id: url
           description: ''
           type:
-            - string | Session
-  - uid: excel.Excel.RequestContext.application
+            - 'excel!Excel.RequestContext~0:complex'
+  - uid: 'excel!Excel.RequestContext#application:member'
     name: application
     fullName: application
     langs:
@@ -38,8 +38,8 @@ items:
       content: 'readonly application: Application;'
       return:
         type:
-          - excel.Excel.Application
-  - uid: excel.Excel.RequestContext.workbook
+          - 'excel!Excel.Application:class'
+  - uid: 'excel!Excel.RequestContext#workbook:member'
     name: workbook
     fullName: workbook
     langs:
@@ -49,4 +49,20 @@ items:
       content: 'readonly workbook: Workbook;'
       return:
         type:
-          - excel.Excel.Workbook
+          - 'excel!Excel.Workbook:class'
+references:
+  - uid: 'excel!OfficeExtension.ClientRequestContext:class'
+    name: OfficeExtension.ClientRequestContext
+  - uid: 'excel!Excel.RequestContext~0:complex'
+    name: string | Session
+    fullName: string | Excel.Session
+    spec.typeScript:
+      - name: 'string | '
+        fullName: 'string | '
+      - uid: 'excel!Excel.Session:class'
+        name: Session
+        fullName: Excel.Session
+  - uid: 'excel!Excel.Application:class'
+    name: Application
+  - uid: 'excel!Excel.Workbook:class'
+    name: Workbook
