--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.workbook.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.workbook.yml
@@ -1,41 +1,41 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Workbook
+  - uid: 'excel!Excel.Workbook:class'
     summary: |-
-      工作簿是顶级对象, 其中包含相关的工作簿对象, 如工作表、表、范围等。若要了解有关工作簿对象模型的详细信息, 请参阅[使用 Excel JAVASCRIPT API 处理工作簿](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-workbooks)<!-- -->.
+      工作簿是顶级对象，其中包含相关的工作簿对象，如工作表、表、范围等。若要了解有关工作簿对象模型的详细信息，请参阅[使用 Excel JAVASCRIPT API 处理工作簿](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-workbooks)<!-- -->.
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Workbook
     fullName: Excel.Workbook
     langs:
       - typeScript
     type: class
     extends:
-      - 'OfficeExtension.ClientObject '
-    package: excel
+      - 'excel!OfficeExtension.ClientObject:class'
+    package: excel!
     children:
-      - excel.Excel.Workbook.application
-      - excel.Excel.Workbook.bindings
-      - excel.Excel.Workbook.context
-      - excel.Excel.Workbook.functions
-      - excel.Excel.Workbook.getSelectedRange
-      - excel.Excel.Workbook.load
-      - excel.Excel.Workbook.load_1
-      - excel.Excel.Workbook.load_2
-      - excel.Excel.Workbook.names
-      - excel.Excel.Workbook.onSelectionChanged
-      - excel.Excel.Workbook.pivotTables
-      - excel.Excel.Workbook.set
-      - excel.Excel.Workbook.set_1
-      - excel.Excel.Workbook.settings
-      - excel.Excel.Workbook.tables
-      - excel.Excel.Workbook.toJSON
-      - excel.Excel.Workbook.worksheets
-  - uid: excel.Excel.Workbook.application
+      - 'excel!Excel.Workbook#application:member'
+      - 'excel!Excel.Workbook#bindings:member'
+      - 'excel!Excel.Workbook#context:member'
+      - 'excel!Excel.Workbook#functions:member'
+      - 'excel!Excel.Workbook#getSelectedRange:member(1)'
+      - 'excel!Excel.Workbook#load:member(1)'
+      - 'excel!Excel.Workbook#load:member(2)'
+      - 'excel!Excel.Workbook#load:member(3)'
+      - 'excel!Excel.Workbook#names:member'
+      - 'excel!Excel.Workbook#onSelectionChanged:member'
+      - 'excel!Excel.Workbook#pivotTables:member'
+      - 'excel!Excel.Workbook#set:member(1)'
+      - 'excel!Excel.Workbook#set:member(2)'
+      - 'excel!Excel.Workbook#settings:member'
+      - 'excel!Excel.Workbook#tables:member'
+      - 'excel!Excel.Workbook#toJSON:member(1)'
+      - 'excel!Excel.Workbook#worksheets:member'
+  - uid: 'excel!Excel.Workbook#application:member'
     summary: |-
       表示包含此工作簿的 Excel 应用程序实例。 只读。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: application
     fullName: application
     langs:
@@ -45,12 +45,12 @@ items:
       content: 'readonly application: Excel.Application;'
       return:
         type:
-          - excel.Excel.Application
-  - uid: excel.Excel.Workbook.bindings
+          - 'excel!Excel.Application:class'
+  - uid: 'excel!Excel.Workbook#bindings:member'
     summary: |-
       表示属于工作簿的绑定的集合。 只读。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bindings
     fullName: bindings
     langs:
@@ -60,8 +60,8 @@ items:
       content: 'readonly bindings: Excel.BindingCollection;'
       return:
         type:
-          - excel.Excel.BindingCollection
-  - uid: excel.Excel.Workbook.context
+          - 'excel!Excel.BindingCollection:class'
+  - uid: 'excel!Excel.Workbook#context:member'
     summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
@@ -72,12 +72,12 @@ items:
       content: 'context: RequestContext;'
       return:
         type:
-          - excel.Excel.RequestContext
-  - uid: excel.Excel.Workbook.functions
+          - 'excel!Excel.RequestContext:class'
+  - uid: 'excel!Excel.Workbook#functions:member'
     summary: |-
       代表可用于计算的工作表函数的集合。 只读。
 
-      \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: functions
     fullName: functions
     langs:
@@ -87,12 +87,12 @@ items:
       content: 'readonly functions: Excel.Functions;'
       return:
         type:
-          - excel.Excel.Functions
-  - uid: excel.Excel.Workbook.getSelectedRange
+          - 'excel!Excel.Functions:class'
+  - uid: 'excel!Excel.Workbook#getSelectedRange:member(1)'
     summary: |-
-      从工作簿中获取当前选定的单个区域。 如果选择了多个区域, 则此方法将引发错误。
+      从工作簿中获取当前选定的单个区域。 如果选择了多个区域，则此方法将引发错误。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getSelectedRange()
     fullName: getSelectedRange()
     langs:
@@ -102,7 +102,7 @@ items:
       content: 'getSelectedRange(): Excel.Range;'
       return:
         type:
-          - excel.Excel.Range
+          - 'excel!Excel.Range:class'
         description: |-
 
 
@@ -122,16 +122,16 @@ items:
               }
           });
           ```
-  - uid: excel.Excel.Workbook.load
+  - uid: 'excel!Excel.Workbook#load:member(1)'
     summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      除了此签名之外, 此方法还具有以下签名:
+      除了此签名之外，此方法还具有以下签名：
 
-      `load(option?: string | string[]): Excel.Workbook`-Where 选项是一个逗号分隔的字符串或一个字符串数组, 用于指定要加载的属性。
+      `load(option?: string | string[]): Excel.Workbook`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      `load(option?: { select?: string; expand?: string; }): Excel.Workbook`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
+      `load(option?: { select?: string; expand?: string; }): Excel.Workbook`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.Workbook`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.Workbook`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -141,15 +141,15 @@ items:
       content: 'load(option?: Excel.Interfaces.WorkbookLoadOptions): Excel.Workbook;'
       return:
         type:
-          - excel.Excel.Workbook
+          - 'excel!Excel.Workbook:class'
         description: ''
       parameters:
         - id: option
           description: ''
           type:
-            - excel.Excel.Interfaces.WorkbookLoadOptions
-  - uid: excel.Excel.Workbook.load_1
-    summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
+            - 'excel!Excel.Interfaces.WorkbookLoadOptions:interface'
+  - uid: 'excel!Excel.Workbook#load:member(2)'
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -159,15 +159,15 @@ items:
       content: 'load(propertyNames?: string | string[]): Excel.Workbook;'
       return:
         type:
-          - excel.Excel.Workbook
+          - 'excel!Excel.Workbook:class'
         description: ''
       parameters:
         - id: propertyNames
-          description: '一个以逗号分隔的字符串或字符串数组, 用于指定要加载的属性。'
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
-  - uid: excel.Excel.Workbook.load_2
-    summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
+  - uid: 'excel!Excel.Workbook#load:member(3)'
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -177,18 +177,18 @@ items:
       content: 'load(propertyNamesAndPaths?: { select?: string; expand?: string; }): Excel.Workbook;'
       return:
         type:
-          - excel.Excel.Workbook
+          - 'excel!Excel.Workbook:class'
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '其中, propertyNamesAndPaths 是用逗号分隔的字符串, 用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串, 用于指定要加载的导航属性。'
+          description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
           type:
             - '{ select?: string; expand?: string; }'
-  - uid: excel.Excel.Workbook.names
+  - uid: 'excel!Excel.Workbook#names:member'
     summary: |-
       表示工作簿范围内的已命名项目（称为区域和常量）的集合。 只读。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: names
     fullName: names
     langs:
@@ -198,12 +198,12 @@ items:
       content: 'readonly names: Excel.NamedItemCollection;'
       return:
         type:
-          - excel.Excel.NamedItemCollection
-  - uid: excel.Excel.Workbook.onSelectionChanged
+          - 'excel!Excel.NamedItemCollection:class'
+  - uid: 'excel!Excel.Workbook#onSelectionChanged:member'
     summary: |-
       文档中的选择更改时发生。
 
-      \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: onSelectionChanged
     fullName: onSelectionChanged
     langs:
@@ -213,12 +213,12 @@ items:
       content: 'readonly onSelectionChanged: OfficeExtension.EventHandlers<Excel.SelectionChangedEventArgs>;'
       return:
         type:
-          - OfficeExtension.EventHandlers<Excel.SelectionChangedEventArgs>
-  - uid: excel.Excel.Workbook.pivotTables
+          - 'excel!Excel.Workbook#onSelectionChanged~0:complex'
+  - uid: 'excel!Excel.Workbook#pivotTables:member'
     summary: |-
       表示一组与 workbook 相关联的 PivotTable 对象。 只读。
 
-      \[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: pivotTables
     fullName: pivotTables
     langs:
@@ -228,11 +228,11 @@ items:
       content: 'readonly pivotTables: Excel.PivotTableCollection;'
       return:
         type:
-          - excel.Excel.PivotTableCollection
-  - uid: excel.Excel.Workbook.set
+          - 'excel!Excel.PivotTableCollection:class'
+  - uid: 'excel!Excel.Workbook#set:member(1)'
     summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      此方法具有以下附加签名:
+      此方法具有以下附加签名：
 
       `set(properties: Excel.Workbook): void`
     name: 'set(properties, options)'
@@ -248,14 +248,14 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: '一个 JavaScript 对象, 其属性的结构 isomorphically 为在其上调用方法的对象的属性。'
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
-            - Interfaces.WorkbookUpdateData
+            - 'excel!Excel.Interfaces.WorkbookUpdateData:interface'
         - id: options
-          description: '提供一个选项, 以在 properties 对象尝试设置任何只读属性时禁止显示错误。'
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - OfficeExtension.UpdateOptions
-  - uid: excel.Excel.Workbook.set_1
+            - 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'excel!Excel.Workbook#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
@@ -272,12 +272,12 @@ items:
         - id: properties
           description: ''
           type:
-            - excel.Excel.Workbook
-  - uid: excel.Excel.Workbook.settings
+            - 'excel!Excel.Workbook:class'
+  - uid: 'excel!Excel.Workbook#settings:member'
     summary: |-
       表示一组与 workbook 相关联的 setting 对象。 只读。
 
-      \[[API 集: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: settings
     fullName: settings
     langs:
@@ -287,12 +287,12 @@ items:
       content: 'readonly settings: Excel.SettingCollection;'
       return:
         type:
-          - excel.Excel.SettingCollection
-  - uid: excel.Excel.Workbook.tables
+          - 'excel!Excel.SettingCollection:class'
+  - uid: 'excel!Excel.Workbook#tables:member'
     summary: |-
       表示与工作簿关联的表的集合。 只读。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tables
     fullName: tables
     langs:
@@ -302,9 +302,9 @@ items:
       content: 'readonly tables: Excel.TableCollection;'
       return:
         type:
-          - excel.Excel.TableCollection
-  - uid: excel.Excel.Workbook.toJSON
-    summary: '重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始的 Excel 工作簿对象是 API 对象, 但`toJSON`方法返回一个简单的 JavaScript 对象 (类型为`Excel.Interfaces.WorkbookData`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。'
+          - 'excel!Excel.TableCollection:class'
+  - uid: 'excel!Excel.Workbook#toJSON:member(1)'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Excel 工作簿对象是 API 对象，但`toJSON`方法返回一个简单的 JavaScript 对象（类型为`Excel.Interfaces.WorkbookData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -314,13 +314,13 @@ items:
       content: 'toJSON(): Excel.Interfaces.WorkbookData;'
       return:
         type:
-          - excel.Excel.Interfaces.WorkbookData
+          - 'excel!Excel.Interfaces.WorkbookData:interface'
         description: ''
-  - uid: excel.Excel.Workbook.worksheets
+  - uid: 'excel!Excel.Workbook#worksheets:member'
     summary: |-
       表示与工作簿关联的工作表的集合。 只读。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheets
     fullName: worksheets
     langs:
@@ -330,4 +330,51 @@ items:
       content: 'readonly worksheets: Excel.WorksheetCollection;'
       return:
         type:
-          - excel.Excel.WorksheetCollection
+          - 'excel!Excel.WorksheetCollection:class'
+references:
+  - uid: 'excel!OfficeExtension.ClientObject:class'
+    name: OfficeExtension.ClientObject
+  - uid: 'excel!Excel.Application:class'
+    name: Excel.Application
+  - uid: 'excel!Excel.BindingCollection:class'
+    name: Excel.BindingCollection
+  - uid: 'excel!Excel.RequestContext:class'
+    name: RequestContext
+  - uid: 'excel!Excel.Functions:class'
+    name: Excel.Functions
+  - uid: 'excel!Excel.Range:class'
+    name: Excel.Range
+  - uid: 'excel!Excel.Workbook:class'
+    name: Excel.Workbook
+  - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions:interface'
+    name: Excel.Interfaces.WorkbookLoadOptions
+  - uid: 'excel!Excel.NamedItemCollection:class'
+    name: Excel.NamedItemCollection
+  - uid: 'excel!Excel.Workbook#onSelectionChanged~0:complex'
+    name: OfficeExtension.EventHandlers<Excel.SelectionChangedEventArgs>
+    fullName: OfficeExtension.EventHandlers<Excel.SelectionChangedEventArgs>
+    spec.typeScript:
+      - uid: 'excel!OfficeExtension.EventHandlers:class'
+        name: OfficeExtension.EventHandlers
+        fullName: OfficeExtension.EventHandlers
+      - name: <
+        fullName: <
+      - uid: 'excel!Excel.SelectionChangedEventArgs:interface'
+        name: Excel.SelectionChangedEventArgs
+        fullName: Excel.SelectionChangedEventArgs
+      - name: '>'
+        fullName: '>'
+  - uid: 'excel!Excel.PivotTableCollection:class'
+    name: Excel.PivotTableCollection
+  - uid: 'excel!Excel.Interfaces.WorkbookUpdateData:interface'
+    name: Interfaces.WorkbookUpdateData
+  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+    name: OfficeExtension.UpdateOptions
+  - uid: 'excel!Excel.SettingCollection:class'
+    name: Excel.SettingCollection
+  - uid: 'excel!Excel.TableCollection:class'
+    name: Excel.TableCollection
+  - uid: 'excel!Excel.Interfaces.WorkbookData:interface'
+    name: Excel.Interfaces.WorkbookData
+  - uid: 'excel!Excel.WorksheetCollection:class'
+    name: Excel.WorksheetCollection
