--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.worksheetcollection.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.worksheetcollection.yml
@@ -1,35 +1,35 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.WorksheetCollection
+  - uid: 'excel!Excel.WorksheetCollection:class'
     summary: |-
       表示属于工作簿的 worksheet 对象的集合。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.WorksheetCollection
     fullName: Excel.WorksheetCollection
     langs:
       - typeScript
     type: class
     extends:
-      - 'OfficeExtension.ClientObject '
-    package: excel
+      - 'excel!OfficeExtension.ClientObject:class'
+    package: excel!
     children:
-      - excel.Excel.WorksheetCollection.add
-      - excel.Excel.WorksheetCollection.context
-      - excel.Excel.WorksheetCollection.getActiveWorksheet
-      - excel.Excel.WorksheetCollection.getCount
-      - excel.Excel.WorksheetCollection.getItem
-      - excel.Excel.WorksheetCollection.getItemOrNullObject
-      - excel.Excel.WorksheetCollection.items
-      - excel.Excel.WorksheetCollection.load
-      - excel.Excel.WorksheetCollection.load_1
-      - excel.Excel.WorksheetCollection.load_2
-      - excel.Excel.WorksheetCollection.toJSON
-  - uid: excel.Excel.WorksheetCollection.add
+      - 'excel!Excel.WorksheetCollection#add:member(1)'
+      - 'excel!Excel.WorksheetCollection#context:member'
+      - 'excel!Excel.WorksheetCollection#getActiveWorksheet:member(1)'
+      - 'excel!Excel.WorksheetCollection#getCount:member(1)'
+      - 'excel!Excel.WorksheetCollection#getItem:member(1)'
+      - 'excel!Excel.WorksheetCollection#getItemOrNullObject:member(1)'
+      - 'excel!Excel.WorksheetCollection#items:member'
+      - 'excel!Excel.WorksheetCollection#load:member(1)'
+      - 'excel!Excel.WorksheetCollection#load:member(2)'
+      - 'excel!Excel.WorksheetCollection#load:member(3)'
+      - 'excel!Excel.WorksheetCollection#toJSON:member(1)'
+  - uid: 'excel!Excel.WorksheetCollection#add:member(1)'
     summary: |-
       向工作簿添加新工作表。工作表将添加到现有工作表的末尾。如果您想要激活新添加的工作表，请对其调用 ".activate()。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: add(name)
     fullName: add(name)
     langs:
@@ -39,7 +39,7 @@ items:
       content: 'add(name?: string): Excel.Worksheet;'
       return:
         type:
-          - excel.Excel.Worksheet
+          - 'excel!Excel.Worksheet:class'
         description: |-
 
 
@@ -65,7 +65,7 @@ items:
           description: 可选。要添加的工作表的名称。如果指定，名称应唯一。如果未指定，Excel 将确定新工作表的名称。
           type:
             - string
-  - uid: excel.Excel.WorksheetCollection.context
+  - uid: 'excel!Excel.WorksheetCollection#context:member'
     summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
@@ -76,12 +76,12 @@ items:
       content: 'context: RequestContext;'
       return:
         type:
-          - excel.Excel.RequestContext
-  - uid: excel.Excel.WorksheetCollection.getActiveWorksheet
+          - 'excel!Excel.RequestContext:class'
+  - uid: 'excel!Excel.WorksheetCollection#getActiveWorksheet:member(1)'
     summary: |-
       获取工作簿中当前处于活动状态的工作表。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getActiveWorksheet()
     fullName: getActiveWorksheet()
     langs:
@@ -91,7 +91,7 @@ items:
       content: 'getActiveWorksheet(): Excel.Worksheet;'
       return:
         type:
-          - excel.Excel.Worksheet
+          - 'excel!Excel.Worksheet:class'
         description: |-
 
 
@@ -111,11 +111,11 @@ items:
               }
           });
           ```
-  - uid: excel.Excel.WorksheetCollection.getCount
+  - uid: 'excel!Excel.WorksheetCollection#getCount:member(1)'
     summary: |-
       获取集合中的工作表数量。
 
-      \[[API 集: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getCount(visibleOnly)
     fullName: getCount(visibleOnly)
     langs:
@@ -125,18 +125,18 @@ items:
       content: 'getCount(visibleOnly?: boolean): OfficeExtension.ClientResult<number>;'
       return:
         type:
-          - OfficeExtension.ClientResult<number>
+          - 'excel!Excel.WorksheetCollection#getCount~0:complex'
         description: ''
       parameters:
         - id: visibleOnly
-          description: '可选。 如果为 true, 则只考虑可见的工作表, 跳过任何隐藏的工作表。'
+          description: 可选。 如果为 true，则只考虑可见的工作表，跳过任何隐藏的工作表。
           type:
             - boolean
-  - uid: excel.Excel.WorksheetCollection.getItem
+  - uid: 'excel!Excel.WorksheetCollection#getItem:member(1)'
     summary: |-
       按 Worksheet 对象的名称或 ID 获取此对象。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItem(key)
     fullName: getItem(key)
     langs:
@@ -146,18 +146,18 @@ items:
       content: 'getItem(key: string): Excel.Worksheet;'
       return:
         type:
-          - excel.Excel.Worksheet
+          - 'excel!Excel.Worksheet:class'
         description: ''
       parameters:
         - id: key
           description: 工作表的名称或 ID。
           type:
             - string
-  - uid: excel.Excel.WorksheetCollection.getItemOrNullObject
+  - uid: 'excel!Excel.WorksheetCollection#getItemOrNullObject:member(1)'
     summary: |-
       按 Worksheet 对象的名称或 ID 获取此对象。 如果没有 Worksheet 对象，将返回 NULL 对象。
 
-      \[[API 集: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItemOrNullObject(key)
     fullName: getItemOrNullObject(key)
     langs:
@@ -167,14 +167,14 @@ items:
       content: 'getItemOrNullObject(key: string): Excel.Worksheet;'
       return:
         type:
-          - excel.Excel.Worksheet
+          - 'excel!Excel.Worksheet:class'
         description: ''
       parameters:
         - id: key
           description: 工作表的名称或 ID。
           type:
             - string
-  - uid: excel.Excel.WorksheetCollection.items
+  - uid: 'excel!Excel.WorksheetCollection#items:member'
     summary: 获取此集合中已加载的子项。
     name: items
     fullName: items
@@ -185,17 +185,17 @@ items:
       content: 'readonly items: Excel.Worksheet[];'
       return:
         type:
-          - 'Excel.Worksheet[]'
-  - uid: excel.Excel.WorksheetCollection.load
+          - 'excel!Excel.WorksheetCollection#items~0:complex'
+  - uid: 'excel!Excel.WorksheetCollection#load:member(1)'
     summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      除了此签名之外, 此方法还具有以下签名:
+      除了此签名之外，此方法还具有以下签名：
 
-      `load(option?: string | string[]): Excel.WorksheetCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组, 用于指定要加载的属性。
+      `load(option?: string | string[]): Excel.WorksheetCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      `load(option?: { select?: string; expand?: string; }): Excel.WorksheetCollection`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
+      `load(option?: { select?: string; expand?: string; }): Excel.WorksheetCollection`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.WorksheetCollection`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.WorksheetCollection`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -205,15 +205,15 @@ items:
       content: 'load(option?: Excel.Interfaces.WorksheetCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions): Excel.WorksheetCollection;'
       return:
         type:
-          - excel.Excel.WorksheetCollection
+          - 'excel!Excel.WorksheetCollection:class'
         description: ''
       parameters:
         - id: option
           description: ''
           type:
-            - Excel.Interfaces.WorksheetCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions
-  - uid: excel.Excel.WorksheetCollection.load_1
-    summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
+            - 'excel!Excel.WorksheetCollection#load~0:complex'
+  - uid: 'excel!Excel.WorksheetCollection#load:member(2)'
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -223,7 +223,7 @@ items:
       content: 'load(propertyNames?: string | string[]): Excel.WorksheetCollection;'
       return:
         type:
-          - excel.Excel.WorksheetCollection
+          - 'excel!Excel.WorksheetCollection:class'
         description: |-
 
 
@@ -249,10 +249,10 @@ items:
           ```
       parameters:
         - id: propertyNames
-          description: '一个以逗号分隔的字符串或字符串数组, 用于指定要加载的属性。'
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
-  - uid: excel.Excel.WorksheetCollection.load_2
+  - uid: 'excel!Excel.WorksheetCollection#load:member(3)'
     name: load(option)
     fullName: load(option)
     langs:
@@ -262,15 +262,15 @@ items:
       content: 'load(option?: OfficeExtension.LoadOption): Excel.WorksheetCollection;'
       return:
         type:
-          - excel.Excel.WorksheetCollection
+          - 'excel!Excel.WorksheetCollection:class'
         description: ''
       parameters:
         - id: option
           description: ''
           type:
-            - OfficeExtension.LoadOption
-  - uid: excel.Excel.WorksheetCollection.toJSON
-    summary: '重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.WorksheetCollection`对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.WorksheetCollectionData`<!-- -->), 其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。'
+            - 'excel!OfficeExtension.LoadOption:interface'
+  - uid: 'excel!Excel.WorksheetCollection#toJSON:member(1)'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.WorksheetCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.WorksheetCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -280,5 +280,48 @@ items:
       content: 'toJSON(): Excel.Interfaces.WorksheetCollectionData;'
       return:
         type:
-          - excel.Excel.Interfaces.WorksheetCollectionData
+          - 'excel!Excel.Interfaces.WorksheetCollectionData:interface'
         description: ''
+references:
+  - uid: 'excel!OfficeExtension.ClientObject:class'
+    name: OfficeExtension.ClientObject
+  - uid: 'excel!Excel.Worksheet:class'
+    name: Excel.Worksheet
+  - uid: 'excel!Excel.RequestContext:class'
+    name: RequestContext
+  - uid: 'excel!Excel.WorksheetCollection#getCount~0:complex'
+    name: OfficeExtension.ClientResult<number>
+    fullName: OfficeExtension.ClientResult<number>
+    spec.typeScript:
+      - uid: 'excel!OfficeExtension.ClientResult:class'
+        name: OfficeExtension.ClientResult
+        fullName: OfficeExtension.ClientResult
+      - name: <number>
+        fullName: <number>
+  - uid: 'excel!Excel.WorksheetCollection#items~0:complex'
+    name: 'Excel.Worksheet[]'
+    fullName: 'Excel.Worksheet[]'
+    spec.typeScript:
+      - uid: 'excel!Excel.Worksheet:class'
+        name: Excel.Worksheet
+        fullName: Excel.Worksheet
+      - name: '[]'
+        fullName: '[]'
+  - uid: 'excel!Excel.WorksheetCollection:class'
+    name: Excel.WorksheetCollection
+  - uid: 'excel!Excel.WorksheetCollection#load~0:complex'
+    name: Excel.Interfaces.WorksheetCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions
+    fullName: Excel.Interfaces.WorksheetCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions
+    spec.typeScript:
+      - uid: 'excel!Excel.Interfaces.WorksheetCollectionLoadOptions:interface'
+        name: Excel.Interfaces.WorksheetCollectionLoadOptions
+        fullName: Excel.Interfaces.WorksheetCollectionLoadOptions
+      - name: ' & '
+        fullName: ' & '
+      - uid: 'excel!Excel.Interfaces.CollectionLoadOptions:interface'
+        name: Excel.Interfaces.CollectionLoadOptions
+        fullName: Excel.Interfaces.CollectionLoadOptions
+  - uid: 'excel!OfficeExtension.LoadOption:interface'
+    name: OfficeExtension.LoadOption
+  - uid: 'excel!Excel.Interfaces.WorksheetCollectionData:interface'
+    name: Excel.Interfaces.WorksheetCollectionData
