--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.chartpoint.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.chartpoint.yml
@@ -1,29 +1,29 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.ChartPoint
+  - uid: 'excel!Excel.ChartPoint:class'
     summary: |-
       表示图表中某个系列的点。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChartPoint
     fullName: Excel.ChartPoint
     langs:
       - typeScript
     type: class
     extends:
-      - 'OfficeExtension.ClientObject '
-    package: excel
+      - 'excel!OfficeExtension.ClientObject:class'
+    package: excel!
     children:
-      - excel.Excel.ChartPoint.context
-      - excel.Excel.ChartPoint.format
-      - excel.Excel.ChartPoint.load
-      - excel.Excel.ChartPoint.load_1
-      - excel.Excel.ChartPoint.load_2
-      - excel.Excel.ChartPoint.set
-      - excel.Excel.ChartPoint.set_1
-      - excel.Excel.ChartPoint.toJSON
-      - excel.Excel.ChartPoint.value
-  - uid: excel.Excel.ChartPoint.context
+      - 'excel!Excel.ChartPoint#context:member'
+      - 'excel!Excel.ChartPoint#format:member'
+      - 'excel!Excel.ChartPoint#load:member(1)'
+      - 'excel!Excel.ChartPoint#load:member(2)'
+      - 'excel!Excel.ChartPoint#load:member(3)'
+      - 'excel!Excel.ChartPoint#set:member(1)'
+      - 'excel!Excel.ChartPoint#set:member(2)'
+      - 'excel!Excel.ChartPoint#toJSON:member(1)'
+      - 'excel!Excel.ChartPoint#value:member'
+  - uid: 'excel!Excel.ChartPoint#context:member'
     summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
@@ -34,12 +34,12 @@ items:
       content: 'context: RequestContext;'
       return:
         type:
-          - excel.Excel.RequestContext
-  - uid: excel.Excel.ChartPoint.format
+          - 'excel!Excel.RequestContext:class'
+  - uid: 'excel!Excel.ChartPoint#format:member'
     summary: |-
       封装图表点的格式属性。 只读。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -49,17 +49,17 @@ items:
       content: 'readonly format: Excel.ChartPointFormat;'
       return:
         type:
-          - excel.Excel.ChartPointFormat
-  - uid: excel.Excel.ChartPoint.load
+          - 'excel!Excel.ChartPointFormat:class'
+  - uid: 'excel!Excel.ChartPoint#load:member(1)'
     summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      除了此签名之外, 此方法还具有以下签名:
+      除了此签名之外，此方法还具有以下签名：
 
-      `load(option?: string | string[]): Excel.ChartPoint`-Where 选项是一个逗号分隔的字符串或一个字符串数组, 用于指定要加载的属性。
+      `load(option?: string | string[]): Excel.ChartPoint`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      `load(option?: { select?: string; expand?: string; }): Excel.ChartPoint`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
+      `load(option?: { select?: string; expand?: string; }): Excel.ChartPoint`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ChartPoint`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ChartPoint`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -69,15 +69,15 @@ items:
       content: 'load(option?: Excel.Interfaces.ChartPointLoadOptions): Excel.ChartPoint;'
       return:
         type:
-          - excel.Excel.ChartPoint
+          - 'excel!Excel.ChartPoint:class'
         description: ''
       parameters:
         - id: option
           description: ''
           type:
-            - excel.Excel.Interfaces.ChartPointLoadOptions
-  - uid: excel.Excel.ChartPoint.load_1
-    summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
+            - 'excel!Excel.Interfaces.ChartPointLoadOptions:interface'
+  - uid: 'excel!Excel.ChartPoint#load:member(2)'
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -87,15 +87,15 @@ items:
       content: 'load(propertyNames?: string | string[]): Excel.ChartPoint;'
       return:
         type:
-          - excel.Excel.ChartPoint
+          - 'excel!Excel.ChartPoint:class'
         description: ''
       parameters:
         - id: propertyNames
-          description: '一个以逗号分隔的字符串或字符串数组, 用于指定要加载的属性。'
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
-  - uid: excel.Excel.ChartPoint.load_2
-    summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
+  - uid: 'excel!Excel.ChartPoint#load:member(3)'
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -105,17 +105,17 @@ items:
       content: 'load(propertyNamesAndPaths?: { select?: string; expand?: string; }): Excel.ChartPoint;'
       return:
         type:
-          - excel.Excel.ChartPoint
+          - 'excel!Excel.ChartPoint:class'
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '其中, propertyNamesAndPaths 是用逗号分隔的字符串, 用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串, 用于指定要加载的导航属性。'
+          description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
           type:
             - '{ select?: string; expand?: string; }'
-  - uid: excel.Excel.ChartPoint.set
+  - uid: 'excel!Excel.ChartPoint#set:member(1)'
     summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      此方法具有以下附加签名:
+      此方法具有以下附加签名：
 
       `set(properties: Excel.ChartPoint): void`
     name: 'set(properties, options)'
@@ -131,14 +131,14 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: '一个 JavaScript 对象, 其属性的结构 isomorphically 为在其上调用方法的对象的属性。'
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
-            - Interfaces.ChartPointUpdateData
+            - 'excel!Excel.Interfaces.ChartPointUpdateData:interface'
         - id: options
-          description: '提供一个选项, 以在 properties 对象尝试设置任何只读属性时禁止显示错误。'
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - OfficeExtension.UpdateOptions
-  - uid: excel.Excel.ChartPoint.set_1
+            - 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'excel!Excel.ChartPoint#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
@@ -155,9 +155,9 @@ items:
         - id: properties
           description: ''
           type:
-            - excel.Excel.ChartPoint
-  - uid: excel.Excel.ChartPoint.toJSON
-    summary: '重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartPoint 对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.ChartPointData`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。'
+            - 'excel!Excel.ChartPoint:class'
+  - uid: 'excel!Excel.ChartPoint#toJSON:member(1)'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartPoint 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartPointData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -167,13 +167,13 @@ items:
       content: 'toJSON(): Excel.Interfaces.ChartPointData;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartPointData
+          - 'excel!Excel.Interfaces.ChartPointData:interface'
         description: ''
-  - uid: excel.Excel.ChartPoint.value
+  - uid: 'excel!Excel.ChartPoint#value:member'
     summary: |-
       返回图表点的值。 只读。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
     fullName: value
     langs:
@@ -184,3 +184,20 @@ items:
       return:
         type:
           - any
+references:
+  - uid: 'excel!OfficeExtension.ClientObject:class'
+    name: OfficeExtension.ClientObject
+  - uid: 'excel!Excel.RequestContext:class'
+    name: RequestContext
+  - uid: 'excel!Excel.ChartPointFormat:class'
+    name: Excel.ChartPointFormat
+  - uid: 'excel!Excel.ChartPoint:class'
+    name: Excel.ChartPoint
+  - uid: 'excel!Excel.Interfaces.ChartPointLoadOptions:interface'
+    name: Excel.Interfaces.ChartPointLoadOptions
+  - uid: 'excel!Excel.Interfaces.ChartPointUpdateData:interface'
+    name: Interfaces.ChartPointUpdateData
+  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+    name: OfficeExtension.UpdateOptions
+  - uid: 'excel!Excel.Interfaces.ChartPointData:interface'
+    name: Excel.Interfaces.ChartPointData
