--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.charttitle.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.charttitle.yml
@@ -1,31 +1,31 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.ChartTitle
+  - uid: 'excel!Excel.ChartTitle:class'
     summary: |-
       表示图表的图表标题对象。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChartTitle
     fullName: Excel.ChartTitle
     langs:
       - typeScript
     type: class
     extends:
-      - 'OfficeExtension.ClientObject '
-    package: excel
+      - 'excel!OfficeExtension.ClientObject:class'
+    package: excel!
     children:
-      - excel.Excel.ChartTitle.context
-      - excel.Excel.ChartTitle.format
-      - excel.Excel.ChartTitle.load
-      - excel.Excel.ChartTitle.load_1
-      - excel.Excel.ChartTitle.load_2
-      - excel.Excel.ChartTitle.overlay
-      - excel.Excel.ChartTitle.set
-      - excel.Excel.ChartTitle.set_1
-      - excel.Excel.ChartTitle.text
-      - excel.Excel.ChartTitle.toJSON
-      - excel.Excel.ChartTitle.visible
-  - uid: excel.Excel.ChartTitle.context
+      - 'excel!Excel.ChartTitle#context:member'
+      - 'excel!Excel.ChartTitle#format:member'
+      - 'excel!Excel.ChartTitle#load:member(1)'
+      - 'excel!Excel.ChartTitle#load:member(2)'
+      - 'excel!Excel.ChartTitle#load:member(3)'
+      - 'excel!Excel.ChartTitle#overlay:member'
+      - 'excel!Excel.ChartTitle#set:member(1)'
+      - 'excel!Excel.ChartTitle#set:member(2)'
+      - 'excel!Excel.ChartTitle#text:member'
+      - 'excel!Excel.ChartTitle#toJSON:member(1)'
+      - 'excel!Excel.ChartTitle#visible:member'
+  - uid: 'excel!Excel.ChartTitle#context:member'
     summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
@@ -36,12 +36,12 @@ items:
       content: 'context: RequestContext;'
       return:
         type:
-          - excel.Excel.RequestContext
-  - uid: excel.Excel.ChartTitle.format
+          - 'excel!Excel.RequestContext:class'
+  - uid: 'excel!Excel.ChartTitle#format:member'
     summary: |-
       表示图表标题的格式，包括填充和字体格式。 只读。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -51,17 +51,17 @@ items:
       content: 'readonly format: Excel.ChartTitleFormat;'
       return:
         type:
-          - excel.Excel.ChartTitleFormat
-  - uid: excel.Excel.ChartTitle.load
+          - 'excel!Excel.ChartTitleFormat:class'
+  - uid: 'excel!Excel.ChartTitle#load:member(1)'
     summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      除了此签名之外, 此方法还具有以下签名:
+      除了此签名之外，此方法还具有以下签名：
 
-      `load(option?: string | string[]): Excel.ChartTitle`-Where 选项是一个逗号分隔的字符串或一个字符串数组, 用于指定要加载的属性。
+      `load(option?: string | string[]): Excel.ChartTitle`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      `load(option?: { select?: string; expand?: string; }): Excel.ChartTitle`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
+      `load(option?: { select?: string; expand?: string; }): Excel.ChartTitle`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ChartTitle`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ChartTitle`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -71,15 +71,15 @@ items:
       content: 'load(option?: Excel.Interfaces.ChartTitleLoadOptions): Excel.ChartTitle;'
       return:
         type:
-          - excel.Excel.ChartTitle
+          - 'excel!Excel.ChartTitle:class'
         description: ''
       parameters:
         - id: option
           description: ''
           type:
-            - excel.Excel.Interfaces.ChartTitleLoadOptions
-  - uid: excel.Excel.ChartTitle.load_1
-    summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
+            - 'excel!Excel.Interfaces.ChartTitleLoadOptions:interface'
+  - uid: 'excel!Excel.ChartTitle#load:member(2)'
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -89,7 +89,7 @@ items:
       content: 'load(propertyNames?: string | string[]): Excel.ChartTitle;'
       return:
         type:
-          - excel.Excel.ChartTitle
+          - 'excel!Excel.ChartTitle:class'
         description: |-
 
 
@@ -133,11 +133,11 @@ items:
           ```
       parameters:
         - id: propertyNames
-          description: '一个以逗号分隔的字符串或字符串数组, 用于指定要加载的属性。'
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
-  - uid: excel.Excel.ChartTitle.load_2
-    summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
+  - uid: 'excel!Excel.ChartTitle#load:member(3)'
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -147,18 +147,18 @@ items:
       content: 'load(propertyNamesAndPaths?: { select?: string; expand?: string; }): Excel.ChartTitle;'
       return:
         type:
-          - excel.Excel.ChartTitle
+          - 'excel!Excel.ChartTitle:class'
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '其中, propertyNamesAndPaths 是用逗号分隔的字符串, 用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串, 用于指定要加载的导航属性。'
+          description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
           type:
             - '{ select?: string; expand?: string; }'
-  - uid: excel.Excel.ChartTitle.overlay
+  - uid: 'excel!Excel.ChartTitle#overlay:member'
     summary: |-
       表示图表标题是否将叠加在图表上的布尔值。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: overlay
     fullName: overlay
     langs:
@@ -169,10 +169,10 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.ChartTitle.set
+  - uid: 'excel!Excel.ChartTitle#set:member(1)'
     summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      此方法具有以下附加签名:
+      此方法具有以下附加签名：
 
       `set(properties: Excel.ChartTitle): void`
     name: 'set(properties, options)'
@@ -188,14 +188,14 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: '一个 JavaScript 对象, 其属性的结构 isomorphically 为在其上调用方法的对象的属性。'
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
-            - Interfaces.ChartTitleUpdateData
+            - 'excel!Excel.Interfaces.ChartTitleUpdateData:interface'
         - id: options
-          description: '提供一个选项, 以在 properties 对象尝试设置任何只读属性时禁止显示错误。'
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - OfficeExtension.UpdateOptions
-  - uid: excel.Excel.ChartTitle.set_1
+            - 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'excel!Excel.ChartTitle#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
@@ -212,12 +212,12 @@ items:
         - id: properties
           description: ''
           type:
-            - excel.Excel.ChartTitle
-  - uid: excel.Excel.ChartTitle.text
+            - 'excel!Excel.ChartTitle:class'
+  - uid: 'excel!Excel.ChartTitle#text:member'
     summary: |-
       表示图表的标题文本。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: text
     fullName: text
     langs:
@@ -228,8 +228,8 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.ChartTitle.toJSON
-    summary: '重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartTitle 对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.ChartTitleData`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。'
+  - uid: 'excel!Excel.ChartTitle#toJSON:member(1)'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartTitle 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartTitleData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -239,13 +239,13 @@ items:
       content: 'toJSON(): Excel.Interfaces.ChartTitleData;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartTitleData
+          - 'excel!Excel.Interfaces.ChartTitleData:interface'
         description: ''
-  - uid: excel.Excel.ChartTitle.visible
+  - uid: 'excel!Excel.ChartTitle#visible:member'
     summary: |-
       表示图表标题对象是否可见的布尔值。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
@@ -256,3 +256,20 @@ items:
       return:
         type:
           - boolean
+references:
+  - uid: 'excel!OfficeExtension.ClientObject:class'
+    name: OfficeExtension.ClientObject
+  - uid: 'excel!Excel.RequestContext:class'
+    name: RequestContext
+  - uid: 'excel!Excel.ChartTitleFormat:class'
+    name: Excel.ChartTitleFormat
+  - uid: 'excel!Excel.ChartTitle:class'
+    name: Excel.ChartTitle
+  - uid: 'excel!Excel.Interfaces.ChartTitleLoadOptions:interface'
+    name: Excel.Interfaces.ChartTitleLoadOptions
+  - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData:interface'
+    name: Interfaces.ChartTitleUpdateData
+  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+    name: OfficeExtension.UpdateOptions
+  - uid: 'excel!Excel.Interfaces.ChartTitleData:interface'
+    name: Excel.Interfaces.ChartTitleData
