--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.chartformatstringupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.chartformatstringupdatedata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ChartFormatStringUpdateData
-    summary: '一个用于更新 ChartFormatString 对象上的数据的接口, 可用于 "chartFormatString (<!-- -->{ ... }<!-- -->)".'
+  - uid: 'excel!Excel.Interfaces.ChartFormatStringUpdateData:interface'
+    summary: '一个用于更新 ChartFormatString 对象上的数据的接口，可用于 "chartFormatString （<!-- -->{ ... }<!-- -->)".'
     name: Excel.Interfaces.ChartFormatStringUpdateData
     fullName: Excel.Interfaces.ChartFormatStringUpdateData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
