--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.custompropertyupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.custompropertyupdatedata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.CustomPropertyUpdateData
-    summary: '一个用于更新 CustomProperty 对象上的数据的接口, 可用于 "customProperty (<!-- -->{ ... }<!-- -->)".'
+  - uid: 'excel!Excel.Interfaces.CustomPropertyUpdateData:interface'
+    summary: '一个用于更新 CustomProperty 对象上的数据的接口，可用于 "customProperty （<!-- -->{ ... }<!-- -->)".'
     name: Excel.Interfaces.CustomPropertyUpdateData
     fullName: Excel.Interfaces.CustomPropertyUpdateData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
