commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.sortmethod.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.sortmethod.yml
@@ -1,24 +1,24 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.SortMethod
-    summary: '<span data-ttu-id="a8434-101">\[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a8434-101">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+  - uid: 'excel!Excel.SortMethod:enum'
+    summary: '<span data-ttu-id="dd7dc-101">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd7dc-101">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
     name: Excel.SortMethod
     fullName: Excel.SortMethod
     langs:
       - typeScript
     type: enum
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.SortMethod.pinYin
-      - excel.Excel.SortMethod.strokeCount
-  - uid: excel.Excel.SortMethod.pinYin
+      - 'excel!Excel.SortMethod.pinYin:member'
+      - 'excel!Excel.SortMethod.strokeCount:member'
+  - uid: 'excel!Excel.SortMethod.pinYin:member'
     name: pinYin
     fullName: pinYin
     langs:
       - typeScript
     type: field
     numericValue: '"PinYin"'
-  - uid: excel.Excel.SortMethod.strokeCount
+  - uid: 'excel!Excel.SortMethod.strokeCount:member'
     name: strokeCount
     fullName: strokeCount
     langs:
