--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.chartaxisloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.chartaxisloadoptions.yml
@@ -1,27 +1,27 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ChartAxisLoadOptions
+  - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="28a82-101">代表图表中的单个坐标轴。</span><span class="sxs-lookup"><span data-stu-id="28a82-101">Represents a single axis in a chart.</span></span>
+      <span data-ttu-id="5bc80-101">代表图表中的单个坐标轴。</span><span class="sxs-lookup"><span data-stu-id="5bc80-101">Represents a single axis in a chart.</span></span>
 
-      <span data-ttu-id="28a82-102">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="28a82-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="5bc80-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5bc80-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Interfaces.ChartAxisLoadOptions
     fullName: Excel.Interfaces.ChartAxisLoadOptions
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ChartAxisLoadOptions.$all
-      - excel.Excel.Interfaces.ChartAxisLoadOptions.format
-      - excel.Excel.Interfaces.ChartAxisLoadOptions.majorGridlines
-      - excel.Excel.Interfaces.ChartAxisLoadOptions.majorUnit
-      - excel.Excel.Interfaces.ChartAxisLoadOptions.maximum
-      - excel.Excel.Interfaces.ChartAxisLoadOptions.minimum
-      - excel.Excel.Interfaces.ChartAxisLoadOptions.minorGridlines
-      - excel.Excel.Interfaces.ChartAxisLoadOptions.minorUnit
-      - excel.Excel.Interfaces.ChartAxisLoadOptions.title
-  - uid: excel.Excel.Interfaces.ChartAxisLoadOptions.$all
+      - 'excel!Excel.Interfaces.ChartAxisLoadOptions#$all:member'
+      - 'excel!Excel.Interfaces.ChartAxisLoadOptions#format:member'
+      - 'excel!Excel.Interfaces.ChartAxisLoadOptions#majorGridlines:member'
+      - 'excel!Excel.Interfaces.ChartAxisLoadOptions#majorUnit:member'
+      - 'excel!Excel.Interfaces.ChartAxisLoadOptions#maximum:member'
+      - 'excel!Excel.Interfaces.ChartAxisLoadOptions#minimum:member'
+      - 'excel!Excel.Interfaces.ChartAxisLoadOptions#minorGridlines:member'
+      - 'excel!Excel.Interfaces.ChartAxisLoadOptions#minorUnit:member'
+      - 'excel!Excel.Interfaces.ChartAxisLoadOptions#title:member'
+  - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#$all:member'
     name: $all
     fullName: $all
     langs:
@@ -32,11 +32,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartAxisLoadOptions.format
+  - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#format:member'
     summary: |-
-      <span data-ttu-id="28a82-103">表示 chart 对象的格式，包括线条和字体格式。</span><span class="sxs-lookup"><span data-stu-id="28a82-103">Represents the formatting of a chart object, which includes line and font formatting.</span></span>
+      <span data-ttu-id="5bc80-103">表示 chart 对象的格式，包括线条和字体格式。</span><span class="sxs-lookup"><span data-stu-id="5bc80-103">Represents the formatting of a chart object, which includes line and font formatting.</span></span>
 
-      <span data-ttu-id="28a82-104">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="28a82-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="5bc80-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5bc80-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: format
     fullName: format
     langs:
@@ -46,12 +46,12 @@ items:
       content: 'format?: Excel.Interfaces.ChartAxisFormatLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartAxisFormatLoadOptions
-  - uid: excel.Excel.Interfaces.ChartAxisLoadOptions.majorGridlines
+          - 'excel!Excel.Interfaces.ChartAxisFormatLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#majorGridlines:member'
     summary: |-
-      <span data-ttu-id="28a82-105">返回一个表示指定坐标轴的主要网格线的网格线对象。</span><span class="sxs-lookup"><span data-stu-id="28a82-105">Returns a Gridlines object that represents the major gridlines for the specified axis.</span></span>
+      <span data-ttu-id="5bc80-105">返回一个表示指定坐标轴的主要网格线的网格线对象。</span><span class="sxs-lookup"><span data-stu-id="5bc80-105">Returns a Gridlines object that represents the major gridlines for the specified axis.</span></span>
 
-      <span data-ttu-id="28a82-106">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="28a82-106">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="5bc80-106">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5bc80-106">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: majorGridlines
     fullName: majorGridlines
     langs:
@@ -61,12 +61,12 @@ items:
       content: 'majorGridlines?: Excel.Interfaces.ChartGridlinesLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartGridlinesLoadOptions
-  - uid: excel.Excel.Interfaces.ChartAxisLoadOptions.majorUnit
+          - 'excel!Excel.Interfaces.ChartGridlinesLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#majorUnit:member'
     summary: |-
-      <span data-ttu-id="28a82-107">表示两个主要刻度标记之间的间隔。</span><span class="sxs-lookup"><span data-stu-id="28a82-107">Represents the interval between two major tick marks.</span></span> <span data-ttu-id="28a82-108">可以设置为数字值或空字符串。</span><span class="sxs-lookup"><span data-stu-id="28a82-108">Can be set to a numeric value or an empty string.</span></span> <span data-ttu-id="28a82-109">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="28a82-109">The returned value is always a number.</span></span>
+      <span data-ttu-id="5bc80-107">表示两个主要刻度标记之间的间隔。</span><span class="sxs-lookup"><span data-stu-id="5bc80-107">Represents the interval between two major tick marks.</span></span> <span data-ttu-id="5bc80-108">可以设置为数字值或空字符串。</span><span class="sxs-lookup"><span data-stu-id="5bc80-108">Can be set to a numeric value or an empty string.</span></span> <span data-ttu-id="5bc80-109">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="5bc80-109">The returned value is always a number.</span></span>
 
-      <span data-ttu-id="28a82-110">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="28a82-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="5bc80-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5bc80-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: majorUnit
     fullName: majorUnit
     langs:
@@ -77,11 +77,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartAxisLoadOptions.maximum
+  - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#maximum:member'
     summary: |-
-      <span data-ttu-id="28a82-111">表示数值轴上的最大值。</span><span class="sxs-lookup"><span data-stu-id="28a82-111">Represents the maximum value on the value axis.</span></span> <span data-ttu-id="28a82-112">可以设置为数字值或空字符串（对于自动坐标轴值）。</span><span class="sxs-lookup"><span data-stu-id="28a82-112">Can be set to a numeric value or an empty string (for automatic axis values).</span></span> <span data-ttu-id="28a82-113">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="28a82-113">The returned value is always a number.</span></span>
+      <span data-ttu-id="5bc80-111">表示数值轴上的最大值。</span><span class="sxs-lookup"><span data-stu-id="5bc80-111">Represents the maximum value on the value axis.</span></span> <span data-ttu-id="5bc80-112">可以设置为数字值或空字符串（对于自动坐标轴值）。</span><span class="sxs-lookup"><span data-stu-id="5bc80-112">Can be set to a numeric value or an empty string (for automatic axis values).</span></span> <span data-ttu-id="5bc80-113">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="5bc80-113">The returned value is always a number.</span></span>
 
-      <span data-ttu-id="28a82-114">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="28a82-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="5bc80-114">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5bc80-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: maximum
     fullName: maximum
     langs:
@@ -92,11 +92,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartAxisLoadOptions.minimum
+  - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#minimum:member'
     summary: |-
-      <span data-ttu-id="28a82-115">表示数值轴上的最小值。</span><span class="sxs-lookup"><span data-stu-id="28a82-115">Represents the minimum value on the value axis.</span></span> <span data-ttu-id="28a82-116">可以设置为数字值或空字符串（对于自动坐标轴值）。</span><span class="sxs-lookup"><span data-stu-id="28a82-116">Can be set to a numeric value or an empty string (for automatic axis values).</span></span> <span data-ttu-id="28a82-117">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="28a82-117">The returned value is always a number.</span></span>
+      <span data-ttu-id="5bc80-115">表示数值轴上的最小值。</span><span class="sxs-lookup"><span data-stu-id="5bc80-115">Represents the minimum value on the value axis.</span></span> <span data-ttu-id="5bc80-116">可以设置为数字值或空字符串（对于自动坐标轴值）。</span><span class="sxs-lookup"><span data-stu-id="5bc80-116">Can be set to a numeric value or an empty string (for automatic axis values).</span></span> <span data-ttu-id="5bc80-117">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="5bc80-117">The returned value is always a number.</span></span>
 
-      <span data-ttu-id="28a82-118">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="28a82-118">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="5bc80-118">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5bc80-118">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: minimum
     fullName: minimum
     langs:
@@ -107,11 +107,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartAxisLoadOptions.minorGridlines
+  - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#minorGridlines:member'
     summary: |-
-      <span data-ttu-id="28a82-119">返回一个表示指定坐标轴的次要网格线的网格线对象。</span><span class="sxs-lookup"><span data-stu-id="28a82-119">Returns a Gridlines object that represents the minor gridlines for the specified axis.</span></span>
+      <span data-ttu-id="5bc80-119">返回一个表示指定坐标轴的次要网格线的网格线对象。</span><span class="sxs-lookup"><span data-stu-id="5bc80-119">Returns a Gridlines object that represents the minor gridlines for the specified axis.</span></span>
 
-      <span data-ttu-id="28a82-120">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="28a82-120">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="5bc80-120">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5bc80-120">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: minorGridlines
     fullName: minorGridlines
     langs:
@@ -121,12 +121,12 @@ items:
       content: 'minorGridlines?: Excel.Interfaces.ChartGridlinesLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartGridlinesLoadOptions
-  - uid: excel.Excel.Interfaces.ChartAxisLoadOptions.minorUnit
+          - 'excel!Excel.Interfaces.ChartGridlinesLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#minorUnit:member'
     summary: |-
-      <span data-ttu-id="28a82-121">表示两个次要刻度标记之间的间隔。</span><span class="sxs-lookup"><span data-stu-id="28a82-121">Represents the interval between two minor tick marks.</span></span> <span data-ttu-id="28a82-122">可以设置为数字值或空字符串（对于自动坐标轴值）。</span><span class="sxs-lookup"><span data-stu-id="28a82-122">Can be set to a numeric value or an empty string (for automatic axis values).</span></span> <span data-ttu-id="28a82-123">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="28a82-123">The returned value is always a number.</span></span>
+      <span data-ttu-id="5bc80-121">表示两个次要刻度标记之间的间隔。</span><span class="sxs-lookup"><span data-stu-id="5bc80-121">Represents the interval between two minor tick marks.</span></span> <span data-ttu-id="5bc80-122">可以设置为数字值或空字符串（对于自动坐标轴值）。</span><span class="sxs-lookup"><span data-stu-id="5bc80-122">Can be set to a numeric value or an empty string (for automatic axis values).</span></span> <span data-ttu-id="5bc80-123">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="5bc80-123">The returned value is always a number.</span></span>
 
-      <span data-ttu-id="28a82-124">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="28a82-124">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="5bc80-124">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5bc80-124">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: minorUnit
     fullName: minorUnit
     langs:
@@ -137,11 +137,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartAxisLoadOptions.title
+  - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#title:member'
     summary: |-
-      <span data-ttu-id="28a82-125">表示坐标轴标题。</span><span class="sxs-lookup"><span data-stu-id="28a82-125">Represents the axis title.</span></span>
+      <span data-ttu-id="5bc80-125">表示坐标轴标题。</span><span class="sxs-lookup"><span data-stu-id="5bc80-125">Represents the axis title.</span></span>
 
-      <span data-ttu-id="28a82-126">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="28a82-126">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="5bc80-126">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5bc80-126">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: title
     fullName: title
     langs:
@@ -151,4 +151,11 @@ items:
       content: 'title?: Excel.Interfaces.ChartAxisTitleLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartAxisTitleLoadOptions
+          - 'excel!Excel.Interfaces.ChartAxisTitleLoadOptions:interface'
+references:
+  - uid: 'excel!Excel.Interfaces.ChartAxisFormatLoadOptions:interface'
+    name: Excel.Interfaces.ChartAxisFormatLoadOptions
+  - uid: 'excel!Excel.Interfaces.ChartGridlinesLoadOptions:interface'
+    name: Excel.Interfaces.ChartGridlinesLoadOptions
+  - uid: 'excel!Excel.Interfaces.ChartAxisTitleLoadOptions:interface'
+    name: Excel.Interfaces.ChartAxisTitleLoadOptions
