--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.chartdatalabelsloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.chartdatalabelsloadoptions.yml
@@ -1,28 +1,28 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ChartDataLabelsLoadOptions
+  - uid: 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="2ce49-101">表示图表点上的所有数据标签的集合。</span><span class="sxs-lookup"><span data-stu-id="2ce49-101">Represents a collection of all the data labels on a chart point.</span></span>
+      <span data-ttu-id="ecb94-101">表示图表点上的所有数据标签的集合。</span><span class="sxs-lookup"><span data-stu-id="ecb94-101">Represents a collection of all the data labels on a chart point.</span></span>
 
-      <span data-ttu-id="2ce49-102">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ce49-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ecb94-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ecb94-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Interfaces.ChartDataLabelsLoadOptions
     fullName: Excel.Interfaces.ChartDataLabelsLoadOptions
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ChartDataLabelsLoadOptions.$all
-      - excel.Excel.Interfaces.ChartDataLabelsLoadOptions.format
-      - excel.Excel.Interfaces.ChartDataLabelsLoadOptions.position
-      - excel.Excel.Interfaces.ChartDataLabelsLoadOptions.separator
-      - excel.Excel.Interfaces.ChartDataLabelsLoadOptions.showBubbleSize
-      - excel.Excel.Interfaces.ChartDataLabelsLoadOptions.showCategoryName
-      - excel.Excel.Interfaces.ChartDataLabelsLoadOptions.showLegendKey
-      - excel.Excel.Interfaces.ChartDataLabelsLoadOptions.showPercentage
-      - excel.Excel.Interfaces.ChartDataLabelsLoadOptions.showSeriesName
-      - excel.Excel.Interfaces.ChartDataLabelsLoadOptions.showValue
-  - uid: excel.Excel.Interfaces.ChartDataLabelsLoadOptions.$all
+      - 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#$all:member'
+      - 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#format:member'
+      - 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#position:member'
+      - 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#separator:member'
+      - 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#showBubbleSize:member'
+      - 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#showCategoryName:member'
+      - 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#showLegendKey:member'
+      - 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#showPercentage:member'
+      - 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#showSeriesName:member'
+      - 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#showValue:member'
+  - uid: 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#$all:member'
     name: $all
     fullName: $all
     langs:
@@ -33,11 +33,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartDataLabelsLoadOptions.format
+  - uid: 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#format:member'
     summary: |-
-      <span data-ttu-id="2ce49-103">表示图表数据标签的格式，包括填充和字体格式。</span><span class="sxs-lookup"><span data-stu-id="2ce49-103">Represents the format of chart data labels, which includes fill and font formatting.</span></span>
+      <span data-ttu-id="ecb94-103">表示图表数据标签的格式，包括填充和字体格式。</span><span class="sxs-lookup"><span data-stu-id="ecb94-103">Represents the format of chart data labels, which includes fill and font formatting.</span></span>
 
-      <span data-ttu-id="2ce49-104">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ce49-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ecb94-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ecb94-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: format
     fullName: format
     langs:
@@ -47,12 +47,12 @@ items:
       content: 'format?: Excel.Interfaces.ChartDataLabelFormatLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartDataLabelFormatLoadOptions
-  - uid: excel.Excel.Interfaces.ChartDataLabelsLoadOptions.position
+          - 'excel!Excel.Interfaces.ChartDataLabelFormatLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#position:member'
     summary: |-
-      <span data-ttu-id="2ce49-105">表示数据标签的位置的 DataLabelPosition 值。</span><span class="sxs-lookup"><span data-stu-id="2ce49-105">DataLabelPosition value that represents the position of the data label.</span></span> <span data-ttu-id="2ce49-106">有关详细信息, 请参阅 ChartDataLabelPosition。</span><span class="sxs-lookup"><span data-stu-id="2ce49-106">See Excel.ChartDataLabelPosition for details.</span></span>
+      <span data-ttu-id="ecb94-105">表示数据标签的位置的 DataLabelPosition 值。</span><span class="sxs-lookup"><span data-stu-id="ecb94-105">DataLabelPosition value that represents the position of the data label.</span></span> <span data-ttu-id="ecb94-106">有关详细信息，请参阅 ChartDataLabelPosition。</span><span class="sxs-lookup"><span data-stu-id="ecb94-106">See Excel.ChartDataLabelPosition for details.</span></span>
 
-      <span data-ttu-id="2ce49-107">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ce49-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ecb94-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ecb94-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: position
     fullName: position
     langs:
@@ -63,11 +63,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartDataLabelsLoadOptions.separator
+  - uid: 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#separator:member'
     summary: |-
-      <span data-ttu-id="2ce49-108">表示用于图表中数据标签的分隔符的字符串。</span><span class="sxs-lookup"><span data-stu-id="2ce49-108">String representing the separator used for the data labels on a chart.</span></span>
+      <span data-ttu-id="ecb94-108">表示用于图表中数据标签的分隔符的字符串。</span><span class="sxs-lookup"><span data-stu-id="ecb94-108">String representing the separator used for the data labels on a chart.</span></span>
 
-      <span data-ttu-id="2ce49-109">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ce49-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ecb94-109">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ecb94-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: separator
     fullName: separator
     langs:
@@ -78,11 +78,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartDataLabelsLoadOptions.showBubbleSize
+  - uid: 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#showBubbleSize:member'
     summary: |-
-      <span data-ttu-id="2ce49-110">该布尔值表示数据标签气泡大小是否可见。</span><span class="sxs-lookup"><span data-stu-id="2ce49-110">Boolean value representing if the data label bubble size is visible or not.</span></span>
+      <span data-ttu-id="ecb94-110">该布尔值表示数据标签气泡大小是否可见。</span><span class="sxs-lookup"><span data-stu-id="ecb94-110">Boolean value representing if the data label bubble size is visible or not.</span></span>
 
-      <span data-ttu-id="2ce49-111">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ce49-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ecb94-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ecb94-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showBubbleSize
     fullName: showBubbleSize
     langs:
@@ -93,11 +93,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartDataLabelsLoadOptions.showCategoryName
+  - uid: 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#showCategoryName:member'
     summary: |-
-      <span data-ttu-id="2ce49-112">表示数据标签分类名称是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="2ce49-112">Boolean value representing if the data label category name is visible or not.</span></span>
+      <span data-ttu-id="ecb94-112">表示数据标签分类名称是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="ecb94-112">Boolean value representing if the data label category name is visible or not.</span></span>
 
-      <span data-ttu-id="2ce49-113">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ce49-113">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ecb94-113">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ecb94-113">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showCategoryName
     fullName: showCategoryName
     langs:
@@ -108,11 +108,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartDataLabelsLoadOptions.showLegendKey
+  - uid: 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#showLegendKey:member'
     summary: |-
-      <span data-ttu-id="2ce49-114">该布尔值表示数据标签图例标示是否可见。</span><span class="sxs-lookup"><span data-stu-id="2ce49-114">Boolean value representing if the data label legend key is visible or not.</span></span>
+      <span data-ttu-id="ecb94-114">该布尔值表示数据标签图例标示是否可见。</span><span class="sxs-lookup"><span data-stu-id="ecb94-114">Boolean value representing if the data label legend key is visible or not.</span></span>
 
-      <span data-ttu-id="2ce49-115">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ce49-115">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ecb94-115">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ecb94-115">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showLegendKey
     fullName: showLegendKey
     langs:
@@ -123,11 +123,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartDataLabelsLoadOptions.showPercentage
+  - uid: 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#showPercentage:member'
     summary: |-
-      <span data-ttu-id="2ce49-116">该布尔值表示数据标签百分比是否可见。</span><span class="sxs-lookup"><span data-stu-id="2ce49-116">Boolean value representing if the data label percentage is visible or not.</span></span>
+      <span data-ttu-id="ecb94-116">该布尔值表示数据标签百分比是否可见。</span><span class="sxs-lookup"><span data-stu-id="ecb94-116">Boolean value representing if the data label percentage is visible or not.</span></span>
 
-      <span data-ttu-id="2ce49-117">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ce49-117">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ecb94-117">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ecb94-117">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showPercentage
     fullName: showPercentage
     langs:
@@ -138,11 +138,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartDataLabelsLoadOptions.showSeriesName
+  - uid: 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#showSeriesName:member'
     summary: |-
-      <span data-ttu-id="2ce49-118">该布尔值表示数据标签系列名称是否可见。</span><span class="sxs-lookup"><span data-stu-id="2ce49-118">Boolean value representing if the data label series name is visible or not.</span></span>
+      <span data-ttu-id="ecb94-118">该布尔值表示数据标签系列名称是否可见。</span><span class="sxs-lookup"><span data-stu-id="ecb94-118">Boolean value representing if the data label series name is visible or not.</span></span>
 
-      <span data-ttu-id="2ce49-119">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ce49-119">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ecb94-119">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ecb94-119">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showSeriesName
     fullName: showSeriesName
     langs:
@@ -153,11 +153,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartDataLabelsLoadOptions.showValue
+  - uid: 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions#showValue:member'
     summary: |-
-      <span data-ttu-id="2ce49-120">该布尔值表示数据标签值是否可见。</span><span class="sxs-lookup"><span data-stu-id="2ce49-120">Boolean value representing if the data label value is visible or not.</span></span>
+      <span data-ttu-id="ecb94-120">该布尔值表示数据标签值是否可见。</span><span class="sxs-lookup"><span data-stu-id="ecb94-120">Boolean value representing if the data label value is visible or not.</span></span>
 
-      <span data-ttu-id="2ce49-121">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ce49-121">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ecb94-121">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ecb94-121">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showValue
     fullName: showValue
     langs:
@@ -168,3 +168,6 @@ items:
       return:
         type:
           - boolean
+references:
+  - uid: 'excel!Excel.Interfaces.ChartDataLabelFormatLoadOptions:interface'
+    name: Excel.Interfaces.ChartDataLabelFormatLoadOptions
