--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.chartformatstringupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.chartformatstringupdatedata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ChartFormatStringUpdateData
-    summary: '<span data-ttu-id="389ff-101">一个用于更新 ChartFormatString 对象上的数据的接口, 可用于 "chartFormatString (</span><span class="sxs-lookup"><span data-stu-id="389ff-101">An interface for updating data on the ChartFormatString object, for use in "chartFormatString.set(</span></span><!-- --><span data-ttu-id="389ff-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="389ff-102"></span></span><!-- --><span data-ttu-id="389ff-103">)".</span><span class="sxs-lookup"><span data-stu-id="389ff-103"></span></span>'
+  - uid: 'excel!Excel.Interfaces.ChartFormatStringUpdateData:interface'
+    summary: '<span data-ttu-id="99a72-101">一个用于更新 ChartFormatString 对象上的数据的接口，可用于 "chartFormatString （</span><span class="sxs-lookup"><span data-stu-id="99a72-101">An interface for updating data on the ChartFormatString object, for use in "chartFormatString.set(</span></span><!-- --><span data-ttu-id="99a72-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="99a72-102"></span></span><!-- --><span data-ttu-id="99a72-103">)".</span><span class="sxs-lookup"><span data-stu-id="99a72-103"></span></span>'
     name: Excel.Interfaces.ChartFormatStringUpdateData
     fullName: Excel.Interfaces.ChartFormatStringUpdateData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
