commit translated contents

--- a/docs/docs-ref-autogen/office/office/office.officetheme.yml
+++ b/docs/docs-ref-autogen/office/office/office.officetheme.yml
@@ -1,12 +1,12 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: office.Office.OfficeTheme
+  - uid: 'office!Office.OfficeTheme:interface'
     summary: |-
       提供了访问 Office 主题颜色的属性。
 
-      使用 Office 主题颜色, 可以将加载项的配色方案与用户选择的当前 Office 主题进行协调, 该主题是在&gt;所有 office &gt;主机应用程序中应用的文件 OFFICE 帐户 Office 主题 UI。 使用 Office 主题颜色适用于邮件和任务窗格外接程序。
+      使用 Office 主题颜色，可以将加载项的配色方案与用户选择的当前 Office 主题进行协调，该主题是在&gt;所有 office &gt;主机应用程序中应用的文件 OFFICE 帐户 Office 主题 UI。 使用 Office 主题颜色适用于邮件和任务窗格外接程序。
     remarks: |-
-      **主机**: Excel、Outlook (在预览中)、PowerPoint、Word
+      **主机**： Excel、Outlook （在预览中）、PowerPoint、Word
 
       `OfficeTheme`仅在 Windows 上的 Office 中受支持。
 
@@ -29,14 +29,14 @@ items:
     langs:
       - typeScript
     type: interface
-    package: office
+    package: office!
     children:
-      - office.Office.OfficeTheme.bodyBackgroundColor
-      - office.Office.OfficeTheme.bodyForegroundColor
-      - office.Office.OfficeTheme.controlBackgroundColor
-      - office.Office.OfficeTheme.controlForegroundColor
-  - uid: office.Office.OfficeTheme.bodyBackgroundColor
-    summary: 以十六进制颜色 (例如 "FFA500") 获取 Office 主题正文的背景色。
+      - 'office!Office.OfficeTheme#bodyBackgroundColor:member'
+      - 'office!Office.OfficeTheme#bodyForegroundColor:member'
+      - 'office!Office.OfficeTheme#controlBackgroundColor:member'
+      - 'office!Office.OfficeTheme#controlForegroundColor:member'
+  - uid: 'office!Office.OfficeTheme#bodyBackgroundColor:member'
+    summary: 以十六进制颜色（例如 "FFA500"）获取 Office 主题正文的背景色。
     name: bodyBackgroundColor
     fullName: bodyBackgroundColor
     langs:
@@ -47,8 +47,8 @@ items:
       return:
         type:
           - string
-  - uid: office.Office.OfficeTheme.bodyForegroundColor
-    summary: '获取 Office 主题正文前景色作为三元的十六进制颜色 (例如, "FFA500")。'
+  - uid: 'office!Office.OfficeTheme#bodyForegroundColor:member'
+    summary: 获取 Office 主题正文前景色作为三元的十六进制颜色（例如，"FFA500"）。
     name: bodyForegroundColor
     fullName: bodyForegroundColor
     langs:
@@ -59,8 +59,8 @@ items:
       return:
         type:
           - string
-  - uid: office.Office.OfficeTheme.controlBackgroundColor
-    summary: '获取 Office 主题控件的背景色作为三元的十六进制颜色 (例如, "FFA500")。'
+  - uid: 'office!Office.OfficeTheme#controlBackgroundColor:member'
+    summary: 获取 Office 主题控件的背景色作为三元的十六进制颜色（例如，"FFA500"）。
     name: controlBackgroundColor
     fullName: controlBackgroundColor
     langs:
@@ -71,8 +71,8 @@ items:
       return:
         type:
           - string
-  - uid: office.Office.OfficeTheme.controlForegroundColor
-    summary: '获取 Office 主题控件的前景色作为三元的十六进制颜色 (例如, "FFA500")。'
+  - uid: 'office!Office.OfficeTheme#controlForegroundColor:member'
+    summary: 获取 Office 主题控件的前景色作为三元的十六进制颜色（例如，"FFA500"）。
     name: controlForegroundColor
     fullName: controlForegroundColor
     langs:
