--- a/docs/docs-ref-autogen/office/office/officeextension.clientrequestcontext.yml
+++ b/docs/docs-ref-autogen/office/office/officeextension.clientrequestcontext.yml
@@ -1,23 +1,23 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: office.OfficeExtension.ClientRequestContext
-    summary: '一个抽象的 RequestContext 对象, 可促进对主机 Office 应用程序的请求。 `Excel.run`和`Word.run`方法提供请求上下文。'
+  - uid: 'office!OfficeExtension.ClientRequestContext:class'
+    summary: 一个抽象的 RequestContext 对象，可促进对主机 Office 应用程序的请求。 `Excel.run`和`Word.run`方法提供请求上下文。
     name: OfficeExtension.ClientRequestContext
     fullName: OfficeExtension.ClientRequestContext
     langs:
       - typeScript
     type: class
-    package: office
+    package: office!
     children:
-      - office.OfficeExtension.ClientRequestContext.(constructor)
-      - office.OfficeExtension.ClientRequestContext.debugInfo
-      - office.OfficeExtension.ClientRequestContext.load
-      - office.OfficeExtension.ClientRequestContext.loadRecursive
-      - office.OfficeExtension.ClientRequestContext.requestHeaders
-      - office.OfficeExtension.ClientRequestContext.sync
-      - office.OfficeExtension.ClientRequestContext.trace
-      - office.OfficeExtension.ClientRequestContext.trackedObjects
-  - uid: office.OfficeExtension.ClientRequestContext.(constructor)
+      - 'office!OfficeExtension.ClientRequestContext:constructor(1)'
+      - 'office!OfficeExtension.ClientRequestContext#debugInfo:member'
+      - 'office!OfficeExtension.ClientRequestContext#load:member(1)'
+      - 'office!OfficeExtension.ClientRequestContext#loadRecursive:member(1)'
+      - 'office!OfficeExtension.ClientRequestContext#requestHeaders:member'
+      - 'office!OfficeExtension.ClientRequestContext#sync:member(1)'
+      - 'office!OfficeExtension.ClientRequestContext#trace:member(1)'
+      - 'office!OfficeExtension.ClientRequestContext#trackedObjects:member'
+  - uid: 'office!OfficeExtension.ClientRequestContext:constructor(1)'
     summary: 构造`ClientRequestContext`类的新实例
     name: (constructor)(url)
     fullName: (constructor)(url)
@@ -31,7 +31,7 @@ items:
           description: ''
           type:
             - string
-  - uid: office.OfficeExtension.ClientRequestContext.debugInfo
+  - uid: 'office!OfficeExtension.ClientRequestContext#debugInfo:member'
     summary: 调式信息
     name: debugInfo
     fullName: debugInfo
@@ -42,9 +42,9 @@ items:
       content: 'readonly debugInfo: RequestContextDebugInfo;'
       return:
         type:
-          - office.OfficeExtension.RequestContextDebugInfo
-  - uid: office.OfficeExtension.ClientRequestContext.load
-    summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
+          - 'office!OfficeExtension.RequestContextDebugInfo:interface'
+  - uid: 'office!OfficeExtension.ClientRequestContext#load:member(1)'
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: 'load(object, option)'
     fullName: 'load(object, option)'
     langs:
@@ -60,16 +60,16 @@ items:
         - id: object
           description: 已加载其属性的对象。
           type:
-            - office.OfficeExtension.ClientObject
+            - 'office!OfficeExtension.ClientObject:class'
         - id: option
-          description: '一个用逗号分隔的字符串或字符串数组, 用于指定要加载的属性或 LoadOption 对象的[officeextension.error](xref:office.OfficeExtension.LoadOption) 。'
+          description: '一个用逗号分隔的字符串或字符串数组，用于指定要加载的属性或 LoadOption 对象的[officeextension.error](xref:office!OfficeExtension.LoadOption:interface) 。'
           type:
-            - 'string | string[] | LoadOption'
-  - uid: office.OfficeExtension.ClientRequestContext.loadRecursive
+            - 'office!OfficeExtension.ClientRequestContext#load~0:complex'
+  - uid: 'office!OfficeExtension.ClientRequestContext#loadRecursive:member(1)'
     summary: |-
-      对命令进行排队, 以以递归方式加载对象的指定属性及其导航属性。
+      对命令进行排队，以以递归方式加载对象的指定属性及其导航属性。
 
-      在读取属性`context.sync()`之前, 必须先调用。
+      在读取属性`context.sync()`之前，必须先调用。
     name: 'loadRecursive(object, options, maxDepth)'
     fullName: 'loadRecursive(object, options, maxDepth)'
     langs:
@@ -85,16 +85,16 @@ items:
         - id: object
           description: 要加载的对象。
           type:
-            - office.OfficeExtension.ClientObject
+            - 'office!OfficeExtension.ClientObject:class'
         - id: options
-          description: '这些类型的加载选项的键值对, 例如`{ "Workbook": "worksheets,tables",  "Worksheet": "tables",  "Tables": "name" }`'
+          description: '这些类型的加载选项的键值对，例如`{ "Workbook": "worksheets,tables",  "Worksheet": "tables",  "Tables": "name" }`'
           type:
-            - '{ [typeName: string]: string | string[] | LoadOption }'
+            - 'office!OfficeExtension.ClientRequestContext#loadRecursive~0:complex'
         - id: maxDepth
           description: 最大递归深度。
           type:
             - number
-  - uid: office.OfficeExtension.ClientRequestContext.requestHeaders
+  - uid: 'office!OfficeExtension.ClientRequestContext#requestHeaders:member'
     summary: 请求标头
     name: requestHeaders
     fullName: requestHeaders
@@ -106,8 +106,8 @@ items:
       return:
         type:
           - '{ [name: string]: string }'
-  - uid: office.OfficeExtension.ClientRequestContext.sync
-    summary: '通过在请求上下文中执行排队和检索加载的 Office 对象的属性以在代码中使用, 来同步 JavaScript 代理对象和 Office 文档之间的状态。 此方法返回一个承诺, 该承诺在同步完成时进行解析。'
+  - uid: 'office!OfficeExtension.ClientRequestContext#sync:member(1)'
+    summary: 通过在请求上下文中执行排队和检索加载的 Office 对象的属性以在代码中使用，来同步 JavaScript 代理对象和 Office 文档之间的状态。 此方法返回一个承诺，该承诺在同步完成时进行解析。
     name: sync(passThroughValue)
     fullName: sync(passThroughValue)
     langs:
@@ -117,7 +117,7 @@ items:
       content: 'sync<T>(passThroughValue?: T): Promise<T>;'
       return:
         type:
-          - Promise<T>
+          - 'office!OfficeExtension.ClientRequestContext#sync~0:complex'
         description: ''
       parameters:
         - id: passThroughValue
@@ -126,8 +126,8 @@ items:
             - T
       typeParameters:
         - id: T
-  - uid: office.OfficeExtension.ClientRequestContext.trace
-    summary: '向队列中添加跟踪消息。 如果由于错误而拒绝`context.sync()`返回的承诺, 则会将 "traceMessages" 数组添加到 officeextension.error 对象, 其中包含已执行的所有跟踪消息。 这些消息可帮助您监视程序执行序列并检测错误的原因。'
+  - uid: 'office!OfficeExtension.ClientRequestContext#trace:member(1)'
+    summary: 向队列中添加跟踪消息。 如果由于错误而拒绝`context.sync()`返回的承诺，则会将 "traceMessages" 数组添加到 officeextension.error 对象，其中包含已执行的所有跟踪消息。 这些消息可帮助您监视程序执行序列并检测错误的原因。
     name: trace(message)
     fullName: trace(message)
     langs:
@@ -144,7 +144,7 @@ items:
           description: ''
           type:
             - string
-  - uid: office.OfficeExtension.ClientRequestContext.trackedObjects
+  - uid: 'office!OfficeExtension.ClientRequestContext#trackedObjects:member'
     summary: 根据文档中的周围更改进行自动调整而跟踪的对象的集合。
     name: trackedObjects
     fullName: trackedObjects
@@ -155,4 +155,40 @@ items:
       content: 'trackedObjects: TrackedObjects;'
       return:
         type:
-          - office.OfficeExtension.TrackedObjects
+          - 'office!OfficeExtension.TrackedObjects:class'
+references:
+  - uid: 'office!OfficeExtension.RequestContextDebugInfo:interface'
+    name: RequestContextDebugInfo
+  - uid: 'office!OfficeExtension.ClientObject:class'
+    name: ClientObject
+  - uid: 'office!OfficeExtension.ClientRequestContext#load~0:complex'
+    name: 'string | string[] | LoadOption'
+    fullName: 'string | string[] | OfficeExtension.LoadOption'
+    spec.typeScript:
+      - name: 'string | string[] | '
+        fullName: 'string | string[] | '
+      - uid: 'office!OfficeExtension.LoadOption:interface'
+        name: LoadOption
+        fullName: OfficeExtension.LoadOption
+  - uid: 'office!OfficeExtension.ClientRequestContext#loadRecursive~0:complex'
+    name: '{ [typeName: string]: string | string[] | LoadOption }'
+    fullName: '{ [typeName: string]: string | string[] | OfficeExtension.LoadOption }'
+    spec.typeScript:
+      - name: '{ [typeName: string]: string | string[] | '
+        fullName: '{ [typeName: string]: string | string[] | '
+      - uid: 'office!OfficeExtension.LoadOption:interface'
+        name: LoadOption
+        fullName: OfficeExtension.LoadOption
+      - name: ' }'
+        fullName: ' }'
+  - uid: 'office!OfficeExtension.ClientRequestContext#sync~0:complex'
+    name: Promise<T>
+    fullName: Promise<T>
+    spec.typeScript:
+      - uid: '!Promise:interface'
+        name: Promise
+        fullName: Promise
+      - name: <T>
+        fullName: <T>
+  - uid: 'office!OfficeExtension.TrackedObjects:class'
+    name: TrackedObjects
