commit bilingual contents

--- a/docs/docs-ref-autogen/office/office/officeextension.clientrequestcontext.yml
+++ b/docs/docs-ref-autogen/office/office/officeextension.clientrequestcontext.yml
@@ -1,24 +1,24 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: office.OfficeExtension.ClientRequestContext
-    summary: '<span data-ttu-id="9939f-101">一个抽象的 RequestContext 对象, 可促进对主机 Office 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="9939f-101">An abstract RequestContext object that facilitates requests to the host Office application.</span></span> <span data-ttu-id="9939f-102">`Excel.run`和`Word.run`方法提供请求上下文。</span><span class="sxs-lookup"><span data-stu-id="9939f-102">The `Excel.run` and `Word.run` methods provide a request context.</span></span>'
+  - uid: 'office!OfficeExtension.ClientRequestContext:class'
+    summary: <span data-ttu-id="7a94a-101">一个抽象的 RequestContext 对象，可促进对主机 Office 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="7a94a-101">An abstract RequestContext object that facilitates requests to the host Office application.</span></span> <span data-ttu-id="7a94a-102">`Excel.run`和`Word.run`方法提供请求上下文。</span><span class="sxs-lookup"><span data-stu-id="7a94a-102">The `Excel.run` and `Word.run` methods provide a request context.</span></span>
     name: OfficeExtension.ClientRequestContext
     fullName: OfficeExtension.ClientRequestContext
     langs:
       - typeScript
     type: class
-    package: office
+    package: office!
     children:
-      - office.OfficeExtension.ClientRequestContext.(constructor)
-      - office.OfficeExtension.ClientRequestContext.debugInfo
-      - office.OfficeExtension.ClientRequestContext.load
-      - office.OfficeExtension.ClientRequestContext.loadRecursive
-      - office.OfficeExtension.ClientRequestContext.requestHeaders
-      - office.OfficeExtension.ClientRequestContext.sync
-      - office.OfficeExtension.ClientRequestContext.trace
-      - office.OfficeExtension.ClientRequestContext.trackedObjects
-  - uid: office.OfficeExtension.ClientRequestContext.(constructor)
-    summary: <span data-ttu-id="9939f-103">构造`ClientRequestContext`类的新实例</span><span class="sxs-lookup"><span data-stu-id="9939f-103">Constructs a new instance of the `ClientRequestContext` class</span></span>
+      - 'office!OfficeExtension.ClientRequestContext:constructor(1)'
+      - 'office!OfficeExtension.ClientRequestContext#debugInfo:member'
+      - 'office!OfficeExtension.ClientRequestContext#load:member(1)'
+      - 'office!OfficeExtension.ClientRequestContext#loadRecursive:member(1)'
+      - 'office!OfficeExtension.ClientRequestContext#requestHeaders:member'
+      - 'office!OfficeExtension.ClientRequestContext#sync:member(1)'
+      - 'office!OfficeExtension.ClientRequestContext#trace:member(1)'
+      - 'office!OfficeExtension.ClientRequestContext#trackedObjects:member'
+  - uid: 'office!OfficeExtension.ClientRequestContext:constructor(1)'
+    summary: <span data-ttu-id="7a94a-103">构造`ClientRequestContext`类的新实例</span><span class="sxs-lookup"><span data-stu-id="7a94a-103">Constructs a new instance of the `ClientRequestContext` class</span></span>
     name: (constructor)(url)
     fullName: (constructor)(url)
     langs:
@@ -31,8 +31,8 @@ items:
           description: ''
           type:
             - string
-  - uid: office.OfficeExtension.ClientRequestContext.debugInfo
-    summary: <span data-ttu-id="9939f-104">调式信息</span><span class="sxs-lookup"><span data-stu-id="9939f-104">Debug information</span></span>
+  - uid: 'office!OfficeExtension.ClientRequestContext#debugInfo:member'
+    summary: <span data-ttu-id="7a94a-104">调式信息</span><span class="sxs-lookup"><span data-stu-id="7a94a-104">Debug information</span></span>
     name: debugInfo
     fullName: debugInfo
     langs:
@@ -42,9 +42,9 @@ items:
       content: 'readonly debugInfo: RequestContextDebugInfo;'
       return:
         type:
-          - office.OfficeExtension.RequestContextDebugInfo
-  - uid: office.OfficeExtension.ClientRequestContext.load
-    summary: '<span data-ttu-id="9939f-105">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="9939f-105">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="9939f-106">在读取属性`context.sync()`之前, 必须先调用。</span><span class="sxs-lookup"><span data-stu-id="9939f-106">You must call `context.sync()` before reading the properties.</span></span>'
+          - 'office!OfficeExtension.RequestContextDebugInfo:interface'
+  - uid: 'office!OfficeExtension.ClientRequestContext#load:member(1)'
+    summary: <span data-ttu-id="7a94a-105">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="7a94a-105">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="7a94a-106">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="7a94a-106">You must call `context.sync()` before reading the properties.</span></span>
     name: 'load(object, option)'
     fullName: 'load(object, option)'
     langs:
@@ -58,18 +58,18 @@ items:
         description: ''
       parameters:
         - id: object
-          description: <span data-ttu-id="9939f-107">已加载其属性的对象。</span><span class="sxs-lookup"><span data-stu-id="9939f-107">The object whose properties are loaded.</span></span>
+          description: <span data-ttu-id="7a94a-107">已加载其属性的对象。</span><span class="sxs-lookup"><span data-stu-id="7a94a-107">The object whose properties are loaded.</span></span>
           type:
-            - office.OfficeExtension.ClientObject
+            - 'office!OfficeExtension.ClientObject:class'
         - id: option
-          description: '<span data-ttu-id="9939f-108">一个用逗号分隔的字符串或字符串数组, 用于指定要加载的属性或 LoadOption 对象的[officeextension.error](xref:office.OfficeExtension.LoadOption) 。</span><span class="sxs-lookup"><span data-stu-id="9939f-108">A comma-delimited string, or array of strings, that specifies the properties to load, or an [OfficeExtension.LoadOption](xref:office.OfficeExtension.LoadOption) object.</span></span>'
+          description: '<span data-ttu-id="7a94a-108">一个用逗号分隔的字符串或字符串数组，用于指定要加载的属性或 LoadOption 对象的[officeextension.error](xref:office!OfficeExtension.LoadOption:interface) 。</span><span class="sxs-lookup"><span data-stu-id="7a94a-108">A comma-delimited string, or array of strings, that specifies the properties to load, or an [OfficeExtension.LoadOption](xref:office!OfficeExtension.LoadOption:interface) object.</span></span>'
           type:
-            - 'string | string[] | LoadOption'
-  - uid: office.OfficeExtension.ClientRequestContext.loadRecursive
+            - 'office!OfficeExtension.ClientRequestContext#load~0:complex'
+  - uid: 'office!OfficeExtension.ClientRequestContext#loadRecursive:member(1)'
     summary: |-
-      <span data-ttu-id="9939f-109">对命令进行排队, 以以递归方式加载对象的指定属性及其导航属性。</span><span class="sxs-lookup"><span data-stu-id="9939f-109">Queues up a command to recursively load the specified properties of the object and its navigation properties.</span></span>
+      <span data-ttu-id="7a94a-109">对命令进行排队，以以递归方式加载对象的指定属性及其导航属性。</span><span class="sxs-lookup"><span data-stu-id="7a94a-109">Queues up a command to recursively load the specified properties of the object and its navigation properties.</span></span>
 
-      <span data-ttu-id="9939f-110">在读取属性`context.sync()`之前, 必须先调用。</span><span class="sxs-lookup"><span data-stu-id="9939f-110">You must call `context.sync()` before reading the properties.</span></span>
+      <span data-ttu-id="7a94a-110">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="7a94a-110">You must call `context.sync()` before reading the properties.</span></span>
     name: 'loadRecursive(object, options, maxDepth)'
     fullName: 'loadRecursive(object, options, maxDepth)'
     langs:
@@ -83,19 +83,19 @@ items:
         description: ''
       parameters:
         - id: object
-          description: <span data-ttu-id="9939f-111">要加载的对象。</span><span class="sxs-lookup"><span data-stu-id="9939f-111">The object to be loaded.</span></span>
+          description: <span data-ttu-id="7a94a-111">要加载的对象。</span><span class="sxs-lookup"><span data-stu-id="7a94a-111">The object to be loaded.</span></span>
           type:
-            - office.OfficeExtension.ClientObject
+            - 'office!OfficeExtension.ClientObject:class'
         - id: options
-          description: '<span data-ttu-id="9939f-112">这些类型的加载选项的键值对, 例如`{ "Workbook": "worksheets,tables",  "Worksheet": "tables",  "Tables": "name" }`</span><span class="sxs-lookup"><span data-stu-id="9939f-112">The key-value pairing of load options for the types, such as `{ "Workbook": "worksheets,tables",  "Worksheet": "tables",  "Tables": "name" }`</span></span>'
+          description: '<span data-ttu-id="7a94a-112">这些类型的加载选项的键值对，例如`{ "Workbook": "worksheets,tables",  "Worksheet": "tables",  "Tables": "name" }`</span><span class="sxs-lookup"><span data-stu-id="7a94a-112">The key-value pairing of load options for the types, such as `{ "Workbook": "worksheets,tables",  "Worksheet": "tables",  "Tables": "name" }`</span></span>'
           type:
-            - '{ [typeName: string]: string | string[] | LoadOption }'
+            - 'office!OfficeExtension.ClientRequestContext#loadRecursive~0:complex'
         - id: maxDepth
-          description: <span data-ttu-id="9939f-113">最大递归深度。</span><span class="sxs-lookup"><span data-stu-id="9939f-113">The maximum recursive depth.</span></span>
+          description: <span data-ttu-id="7a94a-113">最大递归深度。</span><span class="sxs-lookup"><span data-stu-id="7a94a-113">The maximum recursive depth.</span></span>
           type:
             - number
-  - uid: office.OfficeExtension.ClientRequestContext.requestHeaders
-    summary: <span data-ttu-id="9939f-114">请求标头</span><span class="sxs-lookup"><span data-stu-id="9939f-114">Request headers</span></span>
+  - uid: 'office!OfficeExtension.ClientRequestContext#requestHeaders:member'
+    summary: <span data-ttu-id="7a94a-114">请求标头</span><span class="sxs-lookup"><span data-stu-id="7a94a-114">Request headers</span></span>
     name: requestHeaders
     fullName: requestHeaders
     langs:
@@ -106,8 +106,8 @@ items:
       return:
         type:
           - '{ [name: string]: string }'
-  - uid: office.OfficeExtension.ClientRequestContext.sync
-    summary: '<span data-ttu-id="9939f-115">通过在请求上下文中执行排队和检索加载的 Office 对象的属性以在代码中使用, 来同步 JavaScript 代理对象和 Office 文档之间的状态。</span><span class="sxs-lookup"><span data-stu-id="9939f-115">Synchronizes the state between JavaScript proxy objects and the Office document, by executing instructions queued on the request context and retrieving properties of loaded Office objects for use in your code.</span></span> <span data-ttu-id="9939f-116">此方法返回一个承诺, 该承诺在同步完成时进行解析。</span><span class="sxs-lookup"><span data-stu-id="9939f-116">This method returns a promise, which is resolved when the synchronization is complete.</span></span>'
+  - uid: 'office!OfficeExtension.ClientRequestContext#sync:member(1)'
+    summary: '<span data-ttu-id="7a94a-115">通过在请求上下文中执行排队和检索加载的 Office 对象的属性以在代码中使用，来同步 JavaScript 代理对象和 Office 文档之间的状态。</span><span class="sxs-lookup"><span data-stu-id="7a94a-115">Synchronizes the state between JavaScript proxy objects and the Office document, by executing instructions queued on the request context and retrieving properties of loaded Office objects for use in your code.</span></span> <span data-ttu-id="7a94a-116">此方法返回一个承诺，该承诺在同步完成时进行解析。</span><span class="sxs-lookup"><span data-stu-id="7a94a-116">This method returns a promise, which is resolved when the synchronization is complete.</span></span>'
     name: sync(passThroughValue)
     fullName: sync(passThroughValue)
     langs:
@@ -117,7 +117,7 @@ items:
       content: 'sync<T>(passThroughValue?: T): Promise<T>;'
       return:
         type:
-          - Promise<T>
+          - 'office!OfficeExtension.ClientRequestContext#sync~0:complex'
         description: ''
       parameters:
         - id: passThroughValue
@@ -126,8 +126,8 @@ items:
             - T
       typeParameters:
         - id: T
-  - uid: office.OfficeExtension.ClientRequestContext.trace
-    summary: '<span data-ttu-id="9939f-117">向队列中添加跟踪消息。</span><span class="sxs-lookup"><span data-stu-id="9939f-117">Adds a trace message to the queue.</span></span> <span data-ttu-id="9939f-118">如果由于错误而拒绝`context.sync()`返回的承诺, 则会将 "traceMessages" 数组添加到 officeextension.error 对象, 其中包含已执行的所有跟踪消息。</span><span class="sxs-lookup"><span data-stu-id="9939f-118">If the promise returned by `context.sync()` is rejected due to an error, this adds a ".traceMessages" array to the OfficeExtension.Error object, containing all trace messages that were executed.</span></span> <span data-ttu-id="9939f-119">这些消息可帮助您监视程序执行序列并检测错误的原因。</span><span class="sxs-lookup"><span data-stu-id="9939f-119">These messages can help you monitor the program execution sequence and detect the cause of the error.</span></span>'
+  - uid: 'office!OfficeExtension.ClientRequestContext#trace:member(1)'
+    summary: '<span data-ttu-id="7a94a-117">向队列中添加跟踪消息。</span><span class="sxs-lookup"><span data-stu-id="7a94a-117">Adds a trace message to the queue.</span></span> <span data-ttu-id="7a94a-118">如果由于错误而拒绝`context.sync()`返回的承诺，则会将 "traceMessages" 数组添加到 officeextension.error 对象，其中包含已执行的所有跟踪消息。</span><span class="sxs-lookup"><span data-stu-id="7a94a-118">If the promise returned by `context.sync()` is rejected due to an error, this adds a ".traceMessages" array to the OfficeExtension.Error object, containing all trace messages that were executed.</span></span> <span data-ttu-id="7a94a-119">这些消息可帮助您监视程序执行序列并检测错误的原因。</span><span class="sxs-lookup"><span data-stu-id="7a94a-119">These messages can help you monitor the program execution sequence and detect the cause of the error.</span></span>'
     name: trace(message)
     fullName: trace(message)
     langs:
@@ -144,8 +144,8 @@ items:
           description: ''
           type:
             - string
-  - uid: office.OfficeExtension.ClientRequestContext.trackedObjects
-    summary: <span data-ttu-id="9939f-120">根据文档中的周围更改进行自动调整而跟踪的对象的集合。</span><span class="sxs-lookup"><span data-stu-id="9939f-120">Collection of objects that are tracked for automatic adjustments based on surrounding changes in the document.</span></span>
+  - uid: 'office!OfficeExtension.ClientRequestContext#trackedObjects:member'
+    summary: <span data-ttu-id="7a94a-120">根据文档中的周围更改进行自动调整而跟踪的对象的集合。</span><span class="sxs-lookup"><span data-stu-id="7a94a-120">Collection of objects that are tracked for automatic adjustments based on surrounding changes in the document.</span></span>
     name: trackedObjects
     fullName: trackedObjects
     langs:
@@ -155,4 +155,40 @@ items:
       content: 'trackedObjects: TrackedObjects;'
       return:
         type:
-          - office.OfficeExtension.TrackedObjects
+          - 'office!OfficeExtension.TrackedObjects:class'
+references:
+  - uid: 'office!OfficeExtension.RequestContextDebugInfo:interface'
+    name: RequestContextDebugInfo
+  - uid: 'office!OfficeExtension.ClientObject:class'
+    name: ClientObject
+  - uid: 'office!OfficeExtension.ClientRequestContext#load~0:complex'
+    name: 'string | string[] | LoadOption'
+    fullName: 'string | string[] | OfficeExtension.LoadOption'
+    spec.typeScript:
+      - name: 'string | string[] | '
+        fullName: 'string | string[] | '
+      - uid: 'office!OfficeExtension.LoadOption:interface'
+        name: LoadOption
+        fullName: OfficeExtension.LoadOption
+  - uid: 'office!OfficeExtension.ClientRequestContext#loadRecursive~0:complex'
+    name: '{ [typeName: string]: string | string[] | LoadOption }'
+    fullName: '{ [typeName: string]: string | string[] | OfficeExtension.LoadOption }'
+    spec.typeScript:
+      - name: '{ [typeName: string]: string | string[] | '
+        fullName: '{ [typeName: string]: string | string[] | '
+      - uid: 'office!OfficeExtension.LoadOption:interface'
+        name: LoadOption
+        fullName: OfficeExtension.LoadOption
+      - name: ' }'
+        fullName: ' }'
+  - uid: 'office!OfficeExtension.ClientRequestContext#sync~0:complex'
+    name: Promise<T>
+    fullName: Promise<T>
+    spec.typeScript:
+      - uid: '!Promise:interface'
+        name: Promise
+        fullName: Promise
+      - name: <T>
+        fullName: <T>
+  - uid: 'office!OfficeExtension.TrackedObjects:class'
+    name: TrackedObjects
