--- a/docs/docs-ref-autogen/office/office/office.officetheme.yml
+++ b/docs/docs-ref-autogen/office/office/office.officetheme.yml
@@ -1,16 +1,16 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: office.Office.OfficeTheme
+  - uid: 'office!Office.OfficeTheme:interface'
     summary: |-
-      <span data-ttu-id="85810-101">提供了访问 Office 主题颜色的属性。</span><span class="sxs-lookup"><span data-stu-id="85810-101">Provides access to the properties for Office theme colors.</span></span>
+      <span data-ttu-id="4864d-101">提供了访问 Office 主题颜色的属性。</span><span class="sxs-lookup"><span data-stu-id="4864d-101">Provides access to the properties for Office theme colors.</span></span>
 
-      <span data-ttu-id="85810-102">使用 Office 主题颜色, 可以将加载项的配色方案与用户选择的当前 Office 主题进行协调, 该主题是在&gt;所有 office &gt;主机应用程序中应用的文件 OFFICE 帐户 Office 主题 UI。</span><span class="sxs-lookup"><span data-stu-id="85810-102">Using Office theme colors lets you coordinate the color scheme of your add-in with the current Office theme selected by the user with File &gt; Office Account &gt; Office Theme UI, which is applied across all Office host applications.</span></span> <span data-ttu-id="85810-103">使用 Office 主题颜色适用于邮件和任务窗格外接程序。</span><span class="sxs-lookup"><span data-stu-id="85810-103">Using Office theme colors is appropriate for mail and task pane add-ins.</span></span>
+      <span data-ttu-id="4864d-102">使用 Office 主题颜色，可以将加载项的配色方案与用户选择的当前 Office 主题进行协调，该主题是在&gt;所有 office &gt;主机应用程序中应用的文件 OFFICE 帐户 Office 主题 UI。</span><span class="sxs-lookup"><span data-stu-id="4864d-102">Using Office theme colors lets you coordinate the color scheme of your add-in with the current Office theme selected by the user with File &gt; Office Account &gt; Office Theme UI, which is applied across all Office host applications.</span></span> <span data-ttu-id="4864d-103">使用 Office 主题颜色适用于邮件和任务窗格外接程序。</span><span class="sxs-lookup"><span data-stu-id="4864d-103">Using Office theme colors is appropriate for mail and task pane add-ins.</span></span>
     remarks: |-
-      <span data-ttu-id="85810-104">**主机**: Excel、Outlook (在预览中)、PowerPoint、Word</span><span class="sxs-lookup"><span data-stu-id="85810-104">**Hosts**: Excel, Outlook (in preview), PowerPoint, Word</span></span>
+      <span data-ttu-id="4864d-104">**主机**： Excel、Outlook （在预览中）、PowerPoint、Word</span><span class="sxs-lookup"><span data-stu-id="4864d-104">**Hosts**: Excel, Outlook (in preview), PowerPoint, Word</span></span>
 
-      <span data-ttu-id="85810-105">`OfficeTheme`仅在 Windows 上的 Office 中受支持。</span><span class="sxs-lookup"><span data-stu-id="85810-105">`OfficeTheme` is only supported in Office on Windows.</span></span>
+      <span data-ttu-id="4864d-105">`OfficeTheme`仅在 Windows 上的 Office 中受支持。</span><span class="sxs-lookup"><span data-stu-id="4864d-105">`OfficeTheme` is only supported in Office on Windows.</span></span>
 
-      #### <a name="examples"></a><span data-ttu-id="85810-106">示例</span><span class="sxs-lookup"><span data-stu-id="85810-106">Examples</span></span>
+      #### <a name="examples"></a><span data-ttu-id="4864d-106">示例</span><span class="sxs-lookup"><span data-stu-id="4864d-106">Examples</span></span>
 
       ```javascript
       function applyOfficeTheme(){
@@ -29,14 +29,14 @@ items:
     langs:
       - typeScript
     type: interface
-    package: office
+    package: office!
     children:
-      - office.Office.OfficeTheme.bodyBackgroundColor
-      - office.Office.OfficeTheme.bodyForegroundColor
-      - office.Office.OfficeTheme.controlBackgroundColor
-      - office.Office.OfficeTheme.controlForegroundColor
-  - uid: office.Office.OfficeTheme.bodyBackgroundColor
-    summary: <span data-ttu-id="85810-107">以十六进制颜色 (例如 "FFA500") 获取 Office 主题正文的背景色。</span><span class="sxs-lookup"><span data-stu-id="85810-107">Gets the Office theme body background color as a hexadecimal color triplet (e.g. "FFA500").</span></span>
+      - 'office!Office.OfficeTheme#bodyBackgroundColor:member'
+      - 'office!Office.OfficeTheme#bodyForegroundColor:member'
+      - 'office!Office.OfficeTheme#controlBackgroundColor:member'
+      - 'office!Office.OfficeTheme#controlForegroundColor:member'
+  - uid: 'office!Office.OfficeTheme#bodyBackgroundColor:member'
+    summary: <span data-ttu-id="4864d-107">以十六进制颜色（例如 "FFA500"）获取 Office 主题正文的背景色。</span><span class="sxs-lookup"><span data-stu-id="4864d-107">Gets the Office theme body background color as a hexadecimal color triplet (e.g. "FFA500").</span></span>
     name: bodyBackgroundColor
     fullName: bodyBackgroundColor
     langs:
@@ -47,8 +47,8 @@ items:
       return:
         type:
           - string
-  - uid: office.Office.OfficeTheme.bodyForegroundColor
-    summary: '<span data-ttu-id="85810-108">获取 Office 主题正文前景色作为三元的十六进制颜色 (例如, "FFA500")。</span><span class="sxs-lookup"><span data-stu-id="85810-108">Gets the Office theme body foreground color as a hexadecimal color triplet (e.g. "FFA500").</span></span>'
+  - uid: 'office!Office.OfficeTheme#bodyForegroundColor:member'
+    summary: <span data-ttu-id="4864d-108">获取 Office 主题正文前景色作为三元的十六进制颜色（例如，"FFA500"）。</span><span class="sxs-lookup"><span data-stu-id="4864d-108">Gets the Office theme body foreground color as a hexadecimal color triplet (e.g. "FFA500").</span></span>
     name: bodyForegroundColor
     fullName: bodyForegroundColor
     langs:
@@ -59,8 +59,8 @@ items:
       return:
         type:
           - string
-  - uid: office.Office.OfficeTheme.controlBackgroundColor
-    summary: '<span data-ttu-id="85810-109">获取 Office 主题控件的背景色作为三元的十六进制颜色 (例如, "FFA500")。</span><span class="sxs-lookup"><span data-stu-id="85810-109">Gets the Office theme control background color as a hexadecimal color triplet (e.g. "FFA500").</span></span>'
+  - uid: 'office!Office.OfficeTheme#controlBackgroundColor:member'
+    summary: <span data-ttu-id="4864d-109">获取 Office 主题控件的背景色作为三元的十六进制颜色（例如，"FFA500"）。</span><span class="sxs-lookup"><span data-stu-id="4864d-109">Gets the Office theme control background color as a hexadecimal color triplet (e.g. "FFA500").</span></span>
     name: controlBackgroundColor
     fullName: controlBackgroundColor
     langs:
@@ -71,8 +71,8 @@ items:
       return:
         type:
           - string
-  - uid: office.Office.OfficeTheme.controlForegroundColor
-    summary: '<span data-ttu-id="85810-110">获取 Office 主题控件的前景色作为三元的十六进制颜色 (例如, "FFA500")。</span><span class="sxs-lookup"><span data-stu-id="85810-110">Gets the Office theme control foreground color as a hexadecimal color triplet (e.g. "FFA500").</span></span>'
+  - uid: 'office!Office.OfficeTheme#controlForegroundColor:member'
+    summary: <span data-ttu-id="4864d-110">获取 Office 主题控件的前景色作为三元的十六进制颜色（例如，"FFA500"）。</span><span class="sxs-lookup"><span data-stu-id="4864d-110">Gets the Office theme control foreground color as a hexadecimal color triplet (e.g. "FFA500").</span></span>
     name: controlForegroundColor
     fullName: controlForegroundColor
     langs:
