commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.chartaxisgroup.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.chartaxisgroup.yml
@@ -1,24 +1,24 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.ChartAxisGroup
-    summary: '<span data-ttu-id="8a771-101">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8a771-101">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+  - uid: 'excel!Excel.ChartAxisGroup:enum'
+    summary: '<span data-ttu-id="8eac0-101">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8eac0-101">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
     name: Excel.ChartAxisGroup
     fullName: Excel.ChartAxisGroup
     langs:
       - typeScript
     type: enum
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.ChartAxisGroup.primary
-      - excel.Excel.ChartAxisGroup.secondary
-  - uid: excel.Excel.ChartAxisGroup.primary
+      - 'excel!Excel.ChartAxisGroup.primary:member'
+      - 'excel!Excel.ChartAxisGroup.secondary:member'
+  - uid: 'excel!Excel.ChartAxisGroup.primary:member'
     name: primary
     fullName: primary
     langs:
       - typeScript
     type: field
     numericValue: '"Primary"'
-  - uid: excel.Excel.ChartAxisGroup.secondary
+  - uid: 'excel!Excel.ChartAxisGroup.secondary:member'
     name: secondary
     fullName: secondary
     langs:
