--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.charttrendlinelabelformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.charttrendlinelabelformatupdatedata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData
-    summary: '<span data-ttu-id="9ce58-101">一个用于更新 ChartTrendlineLabelFormat 对象上的数据的接口, 可用于 "chartTrendlineLabelFormat (</span><span class="sxs-lookup"><span data-stu-id="9ce58-101">An interface for updating data on the ChartTrendlineLabelFormat object, for use in "chartTrendlineLabelFormat.set(</span></span><!-- --><span data-ttu-id="9ce58-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="9ce58-102"></span></span><!-- --><span data-ttu-id="9ce58-103">)".</span><span class="sxs-lookup"><span data-stu-id="9ce58-103"></span></span>'
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelFormatUpdateData:interface'
+    summary: '<span data-ttu-id="26b2e-101">一个用于更新 ChartTrendlineLabelFormat 对象上的数据的接口，可用于 "chartTrendlineLabelFormat （</span><span class="sxs-lookup"><span data-stu-id="26b2e-101">An interface for updating data on the ChartTrendlineLabelFormat object, for use in "chartTrendlineLabelFormat.set(</span></span><!-- --><span data-ttu-id="26b2e-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="26b2e-102"></span></span><!-- --><span data-ttu-id="26b2e-103">)".</span><span class="sxs-lookup"><span data-stu-id="26b2e-103"></span></span>'
     name: Excel.Interfaces.ChartTrendlineLabelFormatUpdateData
     fullName: Excel.Interfaces.ChartTrendlineLabelFormatUpdateData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
