--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.linedata.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.linedata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.LineData
-    summary: <span data-ttu-id="76d71-101">描述通过调用 "toJSON ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="76d71-101">An interface describing the data returned by calling "line.toJSON()".</span></span>
+  - uid: 'excel!Excel.Interfaces.LineData:interface'
+    summary: <span data-ttu-id="16c78-101">描述通过调用 "toJSON （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="16c78-101">An interface describing the data returned by calling "line.toJSON()".</span></span>
     name: Excel.Interfaces.LineData
     fullName: Excel.Interfaces.LineData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
