--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.dataconnectioncollection.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.dataconnectioncollection.yml
@@ -1,24 +1,24 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.DataConnectionCollection
+  - uid: 'excel!Excel.DataConnectionCollection:class'
     summary: |-
-      <span data-ttu-id="c9ee8-101">表示属于工作簿或工作表的所有数据连接的集合。</span><span class="sxs-lookup"><span data-stu-id="c9ee8-101">Represents a collection of all the Data Connections that are part of the workbook or worksheet.</span></span>
+      <span data-ttu-id="33cc0-101">表示属于工作簿或工作表的所有数据连接的集合。</span><span class="sxs-lookup"><span data-stu-id="33cc0-101">Represents a collection of all the Data Connections that are part of the workbook or worksheet.</span></span>
 
-      <span data-ttu-id="c9ee8-102">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c9ee8-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="33cc0-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="33cc0-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.DataConnectionCollection
     fullName: Excel.DataConnectionCollection
     langs:
       - typeScript
     type: class
     extends:
-      - 'OfficeExtension.ClientObject '
-    package: excel
+      - 'excel!OfficeExtension.ClientObject:class'
+    package: excel!
     children:
-      - excel.Excel.DataConnectionCollection.context
-      - excel.Excel.DataConnectionCollection.refreshAll
-      - excel.Excel.DataConnectionCollection.toJSON
-  - uid: excel.Excel.DataConnectionCollection.context
-    summary: <span data-ttu-id="c9ee8-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="c9ee8-103">The request context associated with the object.</span></span> <span data-ttu-id="c9ee8-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="c9ee8-104">This connects the add-in's process to the Office host application's process.</span></span>
+      - 'excel!Excel.DataConnectionCollection#context:member'
+      - 'excel!Excel.DataConnectionCollection#refreshAll:member(1)'
+      - 'excel!Excel.DataConnectionCollection#toJSON:member(1)'
+  - uid: 'excel!Excel.DataConnectionCollection#context:member'
+    summary: <span data-ttu-id="33cc0-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="33cc0-103">The request context associated with the object.</span></span> <span data-ttu-id="33cc0-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="33cc0-104">This connects the add-in's process to the Office host application's process.</span></span>
     name: context
     fullName: context
     langs:
@@ -28,12 +28,12 @@ items:
       content: 'context: RequestContext;'
       return:
         type:
-          - excel.Excel.RequestContext
-  - uid: excel.Excel.DataConnectionCollection.refreshAll
+          - 'excel!Excel.RequestContext:class'
+  - uid: 'excel!Excel.DataConnectionCollection#refreshAll:member(1)'
     summary: |-
-      <span data-ttu-id="c9ee8-105">刷新集合中的所有数据连接。</span><span class="sxs-lookup"><span data-stu-id="c9ee8-105">Refreshes all the Data Connections in the collection.</span></span>
+      <span data-ttu-id="33cc0-105">刷新集合中的所有数据连接。</span><span class="sxs-lookup"><span data-stu-id="33cc0-105">Refreshes all the Data Connections in the collection.</span></span>
 
-      <span data-ttu-id="c9ee8-106">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c9ee8-106">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="33cc0-106">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="33cc0-106">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: refreshAll()
     fullName: refreshAll()
     langs:
@@ -45,8 +45,8 @@ items:
         type:
           - void
         description: ''
-  - uid: excel.Excel.DataConnectionCollection.toJSON
-    summary: '<span data-ttu-id="c9ee8-107">重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="c9ee8-107">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="c9ee8-108">.</span><span class="sxs-lookup"><span data-stu-id="c9ee8-108"></span></span> <span data-ttu-id="c9ee8-109">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="c9ee8-109"></span></span><!-- --><span data-ttu-id="c9ee8-110">反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始 DataConnectionCollection 对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.DataConnectionCollectionData`</span><span class="sxs-lookup"><span data-stu-id="c9ee8-110">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.DataConnectionCollection object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.DataConnectionCollectionData`</span></span><!-- --><span data-ttu-id="c9ee8-111">), 其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="c9ee8-111">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+  - uid: 'excel!Excel.DataConnectionCollection#toJSON:member(1)'
+    summary: '<span data-ttu-id="33cc0-107">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="33cc0-107">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="33cc0-108">.</span><span class="sxs-lookup"><span data-stu-id="33cc0-108"></span></span> <span data-ttu-id="33cc0-109">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="33cc0-109"></span></span><!-- --><span data-ttu-id="33cc0-110">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 DataConnectionCollection 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.DataConnectionCollectionData`</span><span class="sxs-lookup"><span data-stu-id="33cc0-110">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.DataConnectionCollection object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.DataConnectionCollectionData`</span></span><!-- --><span data-ttu-id="33cc0-111">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="33cc0-111">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -64,3 +64,8 @@ items:
                         [key: string]: string;
                     }
         description: ''
+references:
+  - uid: 'excel!OfficeExtension.ClientObject:class'
+    name: OfficeExtension.ClientObject
+  - uid: 'excel!Excel.RequestContext:class'
+    name: RequestContext
