--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartlegenddata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartlegenddata.yml
@@ -1,29 +1,29 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ChartLegendData
-    summary: <span data-ttu-id="fca7b-101">描述通过调用 "chartLegend ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="fca7b-101">An interface describing the data returned by calling "chartLegend.toJSON()".</span></span>
+  - uid: 'excel!Excel.Interfaces.ChartLegendData:interface'
+    summary: <span data-ttu-id="6c35b-101">描述通过调用 "chartLegend （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="6c35b-101">An interface describing the data returned by calling "chartLegend.toJSON()".</span></span>
     name: Excel.Interfaces.ChartLegendData
     fullName: Excel.Interfaces.ChartLegendData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ChartLegendData.format
-      - excel.Excel.Interfaces.ChartLegendData.height
-      - excel.Excel.Interfaces.ChartLegendData.left
-      - excel.Excel.Interfaces.ChartLegendData.legendEntries
-      - excel.Excel.Interfaces.ChartLegendData.overlay
-      - excel.Excel.Interfaces.ChartLegendData.position
-      - excel.Excel.Interfaces.ChartLegendData.showShadow
-      - excel.Excel.Interfaces.ChartLegendData.top
-      - excel.Excel.Interfaces.ChartLegendData.visible
-      - excel.Excel.Interfaces.ChartLegendData.width
-  - uid: excel.Excel.Interfaces.ChartLegendData.format
+      - 'excel!Excel.Interfaces.ChartLegendData#format:member'
+      - 'excel!Excel.Interfaces.ChartLegendData#height:member'
+      - 'excel!Excel.Interfaces.ChartLegendData#left:member'
+      - 'excel!Excel.Interfaces.ChartLegendData#legendEntries:member'
+      - 'excel!Excel.Interfaces.ChartLegendData#overlay:member'
+      - 'excel!Excel.Interfaces.ChartLegendData#position:member'
+      - 'excel!Excel.Interfaces.ChartLegendData#showShadow:member'
+      - 'excel!Excel.Interfaces.ChartLegendData#top:member'
+      - 'excel!Excel.Interfaces.ChartLegendData#visible:member'
+      - 'excel!Excel.Interfaces.ChartLegendData#width:member'
+  - uid: 'excel!Excel.Interfaces.ChartLegendData#format:member'
     summary: |-
-      <span data-ttu-id="fca7b-102">表示图表图例的格式，包括填充和字体格式。</span><span class="sxs-lookup"><span data-stu-id="fca7b-102">Represents the formatting of a chart legend, which includes fill and font formatting.</span></span> <span data-ttu-id="fca7b-103">只读。</span><span class="sxs-lookup"><span data-stu-id="fca7b-103">Read-only.</span></span>
+      <span data-ttu-id="6c35b-102">表示图表图例的格式，包括填充和字体格式。</span><span class="sxs-lookup"><span data-stu-id="6c35b-102">Represents the formatting of a chart legend, which includes fill and font formatting.</span></span> <span data-ttu-id="6c35b-103">只读。</span><span class="sxs-lookup"><span data-stu-id="6c35b-103">Read-only.</span></span>
 
-      <span data-ttu-id="fca7b-104">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fca7b-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="6c35b-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6c35b-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: format
     fullName: format
     langs:
@@ -33,12 +33,12 @@ items:
       content: 'format?: Excel.Interfaces.ChartLegendFormatData;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartLegendFormatData
-  - uid: excel.Excel.Interfaces.ChartLegendData.height
+          - 'excel!Excel.Interfaces.ChartLegendFormatData:interface'
+  - uid: 'excel!Excel.Interfaces.ChartLegendData#height:member'
     summary: |-
-      <span data-ttu-id="fca7b-105">表示图表上的图例的高度 (以磅为单位)。</span><span class="sxs-lookup"><span data-stu-id="fca7b-105">Represents the height, in points, of the legend on the chart.</span></span> <span data-ttu-id="fca7b-106">如果图例不可见, 则为 Null。</span><span class="sxs-lookup"><span data-stu-id="fca7b-106">Null if legend is not visible.</span></span>
+      <span data-ttu-id="6c35b-105">表示图表上的图例的高度（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="6c35b-105">Represents the height, in points, of the legend on the chart.</span></span> <span data-ttu-id="6c35b-106">如果图例不可见，则为 Null。</span><span class="sxs-lookup"><span data-stu-id="6c35b-106">Null if legend is not visible.</span></span>
 
-      <span data-ttu-id="fca7b-107">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fca7b-107">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="6c35b-107">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6c35b-107">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: height
     fullName: height
     langs:
@@ -49,11 +49,11 @@ items:
       return:
         type:
           - number
-  - uid: excel.Excel.Interfaces.ChartLegendData.left
+  - uid: 'excel!Excel.Interfaces.ChartLegendData#left:member'
     summary: |-
-      <span data-ttu-id="fca7b-108">代表图表图例的左侧 (以磅为单位)。</span><span class="sxs-lookup"><span data-stu-id="fca7b-108">Represents the left, in points, of a chart legend.</span></span> <span data-ttu-id="fca7b-109">如果图例不可见, 则为 Null。</span><span class="sxs-lookup"><span data-stu-id="fca7b-109">Null if legend is not visible.</span></span>
+      <span data-ttu-id="6c35b-108">代表图表图例的左侧（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="6c35b-108">Represents the left, in points, of a chart legend.</span></span> <span data-ttu-id="6c35b-109">如果图例不可见，则为 Null。</span><span class="sxs-lookup"><span data-stu-id="6c35b-109">Null if legend is not visible.</span></span>
 
-      <span data-ttu-id="fca7b-110">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fca7b-110">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="6c35b-110">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6c35b-110">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: left
     fullName: left
     langs:
@@ -64,11 +64,11 @@ items:
       return:
         type:
           - number
-  - uid: excel.Excel.Interfaces.ChartLegendData.legendEntries
+  - uid: 'excel!Excel.Interfaces.ChartLegendData#legendEntries:member'
     summary: |-
-      <span data-ttu-id="fca7b-111">表示图例中 legendEntries 的集合。</span><span class="sxs-lookup"><span data-stu-id="fca7b-111">Represents a collection of legendEntries in the legend.</span></span> <span data-ttu-id="fca7b-112">只读。</span><span class="sxs-lookup"><span data-stu-id="fca7b-112">Read-only.</span></span>
+      <span data-ttu-id="6c35b-111">表示图例中 legendEntries 的集合。</span><span class="sxs-lookup"><span data-stu-id="6c35b-111">Represents a collection of legendEntries in the legend.</span></span> <span data-ttu-id="6c35b-112">只读。</span><span class="sxs-lookup"><span data-stu-id="6c35b-112">Read-only.</span></span>
 
-      <span data-ttu-id="fca7b-113">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fca7b-113">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="6c35b-113">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6c35b-113">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: legendEntries
     fullName: legendEntries
     langs:
@@ -78,12 +78,12 @@ items:
       content: 'legendEntries?: Excel.Interfaces.ChartLegendEntryData[];'
       return:
         type:
-          - 'Excel.Interfaces.ChartLegendEntryData[]'
-  - uid: excel.Excel.Interfaces.ChartLegendData.overlay
+          - 'excel!Excel.Interfaces.ChartLegendData#legendEntries~0:complex'
+  - uid: 'excel!Excel.Interfaces.ChartLegendData#overlay:member'
     summary: |-
-      <span data-ttu-id="fca7b-114">表示图表图例是否应该与图表的主体重叠的布尔值。</span><span class="sxs-lookup"><span data-stu-id="fca7b-114">Boolean value for whether the chart legend should overlap with the main body of the chart.</span></span>
+      <span data-ttu-id="6c35b-114">表示图表图例是否应该与图表的主体重叠的布尔值。</span><span class="sxs-lookup"><span data-stu-id="6c35b-114">Boolean value for whether the chart legend should overlap with the main body of the chart.</span></span>
 
-      <span data-ttu-id="fca7b-115">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fca7b-115">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="6c35b-115">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6c35b-115">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: overlay
     fullName: overlay
     langs:
@@ -94,11 +94,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLegendData.position
+  - uid: 'excel!Excel.Interfaces.ChartLegendData#position:member'
     summary: |-
-      <span data-ttu-id="fca7b-116">表示图例在图表上的位置。</span><span class="sxs-lookup"><span data-stu-id="fca7b-116">Represents the position of the legend on the chart.</span></span> <span data-ttu-id="fca7b-117">有关详细信息, 请参阅 ChartLegendPosition。</span><span class="sxs-lookup"><span data-stu-id="fca7b-117">See Excel.ChartLegendPosition for details.</span></span>
+      <span data-ttu-id="6c35b-116">表示图例在图表上的位置。</span><span class="sxs-lookup"><span data-stu-id="6c35b-116">Represents the position of the legend on the chart.</span></span> <span data-ttu-id="6c35b-117">有关详细信息，请参阅 ChartLegendPosition。</span><span class="sxs-lookup"><span data-stu-id="6c35b-117">See Excel.ChartLegendPosition for details.</span></span>
 
-      <span data-ttu-id="fca7b-118">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fca7b-118">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="6c35b-118">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6c35b-118">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: position
     fullName: position
     langs:
@@ -108,12 +108,12 @@ items:
       content: 'position?: Excel.ChartLegendPosition | "Invalid" | "Top" | "Bottom" | "Left" | "Right" | "Corner" | "Custom";'
       return:
         type:
-          - Excel.ChartLegendPosition | "Invalid" | "Top" | "Bottom" | "Left" | "Right" | "Corner" | "Custom"
-  - uid: excel.Excel.Interfaces.ChartLegendData.showShadow
+          - 'excel!Excel.Interfaces.ChartLegendData#position~0:complex'
+  - uid: 'excel!Excel.Interfaces.ChartLegendData#showShadow:member'
     summary: |-
-      <span data-ttu-id="fca7b-119">表示图例在图表上是否有阴影。</span><span class="sxs-lookup"><span data-stu-id="fca7b-119">Represents if the legend has a shadow on the chart.</span></span>
+      <span data-ttu-id="6c35b-119">表示图例在图表上是否有阴影。</span><span class="sxs-lookup"><span data-stu-id="6c35b-119">Represents if the legend has a shadow on the chart.</span></span>
 
-      <span data-ttu-id="fca7b-120">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fca7b-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="6c35b-120">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6c35b-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showShadow
     fullName: showShadow
     langs:
@@ -124,11 +124,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLegendData.top
+  - uid: 'excel!Excel.Interfaces.ChartLegendData#top:member'
     summary: |-
-      <span data-ttu-id="fca7b-121">表示图表图例顶部。</span><span class="sxs-lookup"><span data-stu-id="fca7b-121">Represents the top of a chart legend.</span></span>
+      <span data-ttu-id="6c35b-121">表示图表图例顶部。</span><span class="sxs-lookup"><span data-stu-id="6c35b-121">Represents the top of a chart legend.</span></span>
 
-      <span data-ttu-id="fca7b-122">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fca7b-122">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="6c35b-122">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6c35b-122">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: top
     fullName: top
     langs:
@@ -139,11 +139,11 @@ items:
       return:
         type:
           - number
-  - uid: excel.Excel.Interfaces.ChartLegendData.visible
+  - uid: 'excel!Excel.Interfaces.ChartLegendData#visible:member'
     summary: |-
-      <span data-ttu-id="fca7b-123">表示 ChartLegend 对象是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="fca7b-123">A boolean value the represents the visibility of a ChartLegend object.</span></span>
+      <span data-ttu-id="6c35b-123">表示 ChartLegend 对象是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="6c35b-123">A boolean value the represents the visibility of a ChartLegend object.</span></span>
 
-      <span data-ttu-id="fca7b-124">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fca7b-124">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="6c35b-124">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6c35b-124">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: visible
     fullName: visible
     langs:
@@ -154,11 +154,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLegendData.width
+  - uid: 'excel!Excel.Interfaces.ChartLegendData#width:member'
     summary: |-
-      <span data-ttu-id="fca7b-125">表示图表上的图例的宽度 (以磅为单位)。</span><span class="sxs-lookup"><span data-stu-id="fca7b-125">Represents the width, in points, of the legend on the chart.</span></span> <span data-ttu-id="fca7b-126">如果图例不可见, 则为 Null。</span><span class="sxs-lookup"><span data-stu-id="fca7b-126">Null if legend is not visible.</span></span>
+      <span data-ttu-id="6c35b-125">表示图表上的图例的宽度（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="6c35b-125">Represents the width, in points, of the legend on the chart.</span></span> <span data-ttu-id="6c35b-126">如果图例不可见，则为 Null。</span><span class="sxs-lookup"><span data-stu-id="6c35b-126">Null if legend is not visible.</span></span>
 
-      <span data-ttu-id="fca7b-127">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fca7b-127">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="6c35b-127">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6c35b-127">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: width
     fullName: width
     langs:
@@ -169,3 +169,24 @@ items:
       return:
         type:
           - number
+references:
+  - uid: 'excel!Excel.Interfaces.ChartLegendFormatData:interface'
+    name: Excel.Interfaces.ChartLegendFormatData
+  - uid: 'excel!Excel.Interfaces.ChartLegendData#legendEntries~0:complex'
+    name: 'Excel.Interfaces.ChartLegendEntryData[]'
+    fullName: 'Excel.Interfaces.ChartLegendEntryData[]'
+    spec.typeScript:
+      - uid: 'excel!Excel.Interfaces.ChartLegendEntryData:interface'
+        name: Excel.Interfaces.ChartLegendEntryData
+        fullName: Excel.Interfaces.ChartLegendEntryData
+      - name: '[]'
+        fullName: '[]'
+  - uid: 'excel!Excel.Interfaces.ChartLegendData#position~0:complex'
+    name: Excel.ChartLegendPosition | "Invalid" | "Top" | "Bottom" | "Left" | "Right" | "Corner" | "Custom"
+    fullName: Excel.ChartLegendPosition | "Invalid" | "Top" | "Bottom" | "Left" | "Right" | "Corner" | "Custom"
+    spec.typeScript:
+      - uid: 'excel!Excel.ChartLegendPosition:enum'
+        name: Excel.ChartLegendPosition
+        fullName: Excel.ChartLegendPosition
+      - name: ' | "Invalid" | "Top" | "Bottom" | "Left" | "Right" | "Corner" | "Custom"'
+        fullName: ' | "Invalid" | "Top" | "Bottom" | "Left" | "Right" | "Corner" | "Custom"'
