--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartlegendloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartlegendloadoptions.yml
@@ -1,28 +1,28 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ChartLegendLoadOptions
+  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="7bb71-101">表示图表中的图例。</span><span class="sxs-lookup"><span data-stu-id="7bb71-101">Represents the legend in a chart.</span></span>
+      <span data-ttu-id="97b28-101">表示图表中的图例。</span><span class="sxs-lookup"><span data-stu-id="97b28-101">Represents the legend in a chart.</span></span>
 
-      <span data-ttu-id="7bb71-102">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7bb71-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="97b28-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="97b28-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Interfaces.ChartLegendLoadOptions
     fullName: Excel.Interfaces.ChartLegendLoadOptions
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ChartLegendLoadOptions.$all
-      - excel.Excel.Interfaces.ChartLegendLoadOptions.format
-      - excel.Excel.Interfaces.ChartLegendLoadOptions.height
-      - excel.Excel.Interfaces.ChartLegendLoadOptions.left
-      - excel.Excel.Interfaces.ChartLegendLoadOptions.overlay
-      - excel.Excel.Interfaces.ChartLegendLoadOptions.position
-      - excel.Excel.Interfaces.ChartLegendLoadOptions.showShadow
-      - excel.Excel.Interfaces.ChartLegendLoadOptions.top
-      - excel.Excel.Interfaces.ChartLegendLoadOptions.visible
-      - excel.Excel.Interfaces.ChartLegendLoadOptions.width
-  - uid: excel.Excel.Interfaces.ChartLegendLoadOptions.$all
+      - 'excel!Excel.Interfaces.ChartLegendLoadOptions#$all:member'
+      - 'excel!Excel.Interfaces.ChartLegendLoadOptions#format:member'
+      - 'excel!Excel.Interfaces.ChartLegendLoadOptions#height:member'
+      - 'excel!Excel.Interfaces.ChartLegendLoadOptions#left:member'
+      - 'excel!Excel.Interfaces.ChartLegendLoadOptions#overlay:member'
+      - 'excel!Excel.Interfaces.ChartLegendLoadOptions#position:member'
+      - 'excel!Excel.Interfaces.ChartLegendLoadOptions#showShadow:member'
+      - 'excel!Excel.Interfaces.ChartLegendLoadOptions#top:member'
+      - 'excel!Excel.Interfaces.ChartLegendLoadOptions#visible:member'
+      - 'excel!Excel.Interfaces.ChartLegendLoadOptions#width:member'
+  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#$all:member'
     name: $all
     fullName: $all
     langs:
@@ -33,11 +33,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLegendLoadOptions.format
+  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#format:member'
     summary: |-
-      <span data-ttu-id="7bb71-103">表示图表图例的格式，包括填充和字体格式。</span><span class="sxs-lookup"><span data-stu-id="7bb71-103">Represents the formatting of a chart legend, which includes fill and font formatting.</span></span>
+      <span data-ttu-id="97b28-103">表示图表图例的格式，包括填充和字体格式。</span><span class="sxs-lookup"><span data-stu-id="97b28-103">Represents the formatting of a chart legend, which includes fill and font formatting.</span></span>
 
-      <span data-ttu-id="7bb71-104">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7bb71-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="97b28-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="97b28-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: format
     fullName: format
     langs:
@@ -47,12 +47,12 @@ items:
       content: 'format?: Excel.Interfaces.ChartLegendFormatLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartLegendFormatLoadOptions
-  - uid: excel.Excel.Interfaces.ChartLegendLoadOptions.height
+          - 'excel!Excel.Interfaces.ChartLegendFormatLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#height:member'
     summary: |-
-      <span data-ttu-id="7bb71-105">表示图表上的图例的高度 (以磅为单位)。</span><span class="sxs-lookup"><span data-stu-id="7bb71-105">Represents the height, in points, of the legend on the chart.</span></span> <span data-ttu-id="7bb71-106">如果图例不可见, 则为 Null。</span><span class="sxs-lookup"><span data-stu-id="7bb71-106">Null if legend is not visible.</span></span>
+      <span data-ttu-id="97b28-105">表示图表上的图例的高度（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="97b28-105">Represents the height, in points, of the legend on the chart.</span></span> <span data-ttu-id="97b28-106">如果图例不可见，则为 Null。</span><span class="sxs-lookup"><span data-stu-id="97b28-106">Null if legend is not visible.</span></span>
 
-      <span data-ttu-id="7bb71-107">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7bb71-107">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="97b28-107">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="97b28-107">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: height
     fullName: height
     langs:
@@ -63,11 +63,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLegendLoadOptions.left
+  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#left:member'
     summary: |-
-      <span data-ttu-id="7bb71-108">代表图表图例的左侧 (以磅为单位)。</span><span class="sxs-lookup"><span data-stu-id="7bb71-108">Represents the left, in points, of a chart legend.</span></span> <span data-ttu-id="7bb71-109">如果图例不可见, 则为 Null。</span><span class="sxs-lookup"><span data-stu-id="7bb71-109">Null if legend is not visible.</span></span>
+      <span data-ttu-id="97b28-108">代表图表图例的左侧（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="97b28-108">Represents the left, in points, of a chart legend.</span></span> <span data-ttu-id="97b28-109">如果图例不可见，则为 Null。</span><span class="sxs-lookup"><span data-stu-id="97b28-109">Null if legend is not visible.</span></span>
 
-      <span data-ttu-id="7bb71-110">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7bb71-110">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="97b28-110">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="97b28-110">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: left
     fullName: left
     langs:
@@ -78,11 +78,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLegendLoadOptions.overlay
+  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#overlay:member'
     summary: |-
-      <span data-ttu-id="7bb71-111">表示图表图例是否应该与图表的主体重叠的布尔值。</span><span class="sxs-lookup"><span data-stu-id="7bb71-111">Boolean value for whether the chart legend should overlap with the main body of the chart.</span></span>
+      <span data-ttu-id="97b28-111">表示图表图例是否应该与图表的主体重叠的布尔值。</span><span class="sxs-lookup"><span data-stu-id="97b28-111">Boolean value for whether the chart legend should overlap with the main body of the chart.</span></span>
 
-      <span data-ttu-id="7bb71-112">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7bb71-112">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="97b28-112">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="97b28-112">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: overlay
     fullName: overlay
     langs:
@@ -93,11 +93,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLegendLoadOptions.position
+  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#position:member'
     summary: |-
-      <span data-ttu-id="7bb71-113">表示图例在图表上的位置。</span><span class="sxs-lookup"><span data-stu-id="7bb71-113">Represents the position of the legend on the chart.</span></span> <span data-ttu-id="7bb71-114">有关详细信息, 请参阅 ChartLegendPosition。</span><span class="sxs-lookup"><span data-stu-id="7bb71-114">See Excel.ChartLegendPosition for details.</span></span>
+      <span data-ttu-id="97b28-113">表示图例在图表上的位置。</span><span class="sxs-lookup"><span data-stu-id="97b28-113">Represents the position of the legend on the chart.</span></span> <span data-ttu-id="97b28-114">有关详细信息，请参阅 ChartLegendPosition。</span><span class="sxs-lookup"><span data-stu-id="97b28-114">See Excel.ChartLegendPosition for details.</span></span>
 
-      <span data-ttu-id="7bb71-115">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7bb71-115">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="97b28-115">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="97b28-115">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: position
     fullName: position
     langs:
@@ -108,11 +108,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLegendLoadOptions.showShadow
+  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#showShadow:member'
     summary: |-
-      <span data-ttu-id="7bb71-116">表示图例在图表上是否有阴影。</span><span class="sxs-lookup"><span data-stu-id="7bb71-116">Represents if the legend has a shadow on the chart.</span></span>
+      <span data-ttu-id="97b28-116">表示图例在图表上是否有阴影。</span><span class="sxs-lookup"><span data-stu-id="97b28-116">Represents if the legend has a shadow on the chart.</span></span>
 
-      <span data-ttu-id="7bb71-117">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7bb71-117">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="97b28-117">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="97b28-117">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showShadow
     fullName: showShadow
     langs:
@@ -123,11 +123,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLegendLoadOptions.top
+  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#top:member'
     summary: |-
-      <span data-ttu-id="7bb71-118">表示图表图例顶部。</span><span class="sxs-lookup"><span data-stu-id="7bb71-118">Represents the top of a chart legend.</span></span>
+      <span data-ttu-id="97b28-118">表示图表图例顶部。</span><span class="sxs-lookup"><span data-stu-id="97b28-118">Represents the top of a chart legend.</span></span>
 
-      <span data-ttu-id="7bb71-119">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7bb71-119">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="97b28-119">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="97b28-119">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: top
     fullName: top
     langs:
@@ -138,11 +138,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLegendLoadOptions.visible
+  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#visible:member'
     summary: |-
-      <span data-ttu-id="7bb71-120">表示 ChartLegend 对象是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="7bb71-120">A boolean value the represents the visibility of a ChartLegend object.</span></span>
+      <span data-ttu-id="97b28-120">表示 ChartLegend 对象是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="97b28-120">A boolean value the represents the visibility of a ChartLegend object.</span></span>
 
-      <span data-ttu-id="7bb71-121">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7bb71-121">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="97b28-121">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="97b28-121">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: visible
     fullName: visible
     langs:
@@ -153,11 +153,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLegendLoadOptions.width
+  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#width:member'
     summary: |-
-      <span data-ttu-id="7bb71-122">表示图表上的图例的宽度 (以磅为单位)。</span><span class="sxs-lookup"><span data-stu-id="7bb71-122">Represents the width, in points, of the legend on the chart.</span></span> <span data-ttu-id="7bb71-123">如果图例不可见, 则为 Null。</span><span class="sxs-lookup"><span data-stu-id="7bb71-123">Null if legend is not visible.</span></span>
+      <span data-ttu-id="97b28-122">表示图表上的图例的宽度（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="97b28-122">Represents the width, in points, of the legend on the chart.</span></span> <span data-ttu-id="97b28-123">如果图例不可见，则为 Null。</span><span class="sxs-lookup"><span data-stu-id="97b28-123">Null if legend is not visible.</span></span>
 
-      <span data-ttu-id="7bb71-124">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7bb71-124">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="97b28-124">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="97b28-124">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: width
     fullName: width
     langs:
@@ -168,3 +168,6 @@ items:
       return:
         type:
           - boolean
+references:
+  - uid: 'excel!Excel.Interfaces.ChartLegendFormatLoadOptions:interface'
+    name: Excel.Interfaces.ChartLegendFormatLoadOptions
